@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.beans.propertyeditors;
 
 import java.beans.PropertyEditor;
 import java.beans.PropertyEditorSupport;
-import java.beans.PropertyVetoException;
 import java.io.File;
 import java.math.BigDecimal;
 import java.math.BigInteger;
@@ -36,18 +35,18 @@ import java.util.StringTokenizer;
 import java.util.Vector;
 import java.util.regex.Pattern;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.BeanWrapper;
 import org.springframework.beans.BeanWrapperImpl;
 import org.springframework.beans.BeansException;
 import org.springframework.beans.MutablePropertyValues;
 import org.springframework.beans.PropertyValue;
-import org.springframework.tests.sample.beans.BooleanTestBean;
-import org.springframework.tests.sample.beans.ITestBean;
-import org.springframework.tests.sample.beans.IndexedTestBean;
-import org.springframework.tests.sample.beans.NumberTestBean;
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.beans.testfixture.beans.BooleanTestBean;
+import org.springframework.beans.testfixture.beans.ITestBean;
+import org.springframework.beans.testfixture.beans.IndexedTestBean;
+import org.springframework.beans.testfixture.beans.NumberTestBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -55,7 +54,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
 import static org.assertj.core.api.Assertions.within;
 
 /**
- * Unit tests for the various PropertyEditors in Spring.
+ * Tests for the various PropertyEditors in Spring.
  *
  * @author Juergen Hoeller
  * @author Rick Evans
@@ -64,10 +63,10 @@ import static org.assertj.core.api.Assertions.within;
  * @author Chris Beams
  * @since 10.06.2003
  */
-public class CustomEditorTests {
+class CustomEditorTests {
 
 	@Test
-	public void testComplexObject() {
+	void complexObject() {
 		TestBean tb = new TestBean();
 		String newName = "Rod";
 		String tbString = "Kerry_34";
@@ -75,17 +74,17 @@ public class CustomEditorTests {
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(ITestBean.class, new TestBeanEditor());
 		MutablePropertyValues pvs = new MutablePropertyValues();
-		pvs.addPropertyValue(new PropertyValue("age", new Integer(55)));
+		pvs.addPropertyValue(new PropertyValue("age", 55));
 		pvs.addPropertyValue(new PropertyValue("name", newName));
 		pvs.addPropertyValue(new PropertyValue("touchy", "valid"));
 		pvs.addPropertyValue(new PropertyValue("spouse", tbString));
 		bw.setPropertyValues(pvs);
-		assertThat(tb.getSpouse() != null).as("spouse is non-null").isTrue();
+		assertThat(tb.getSpouse()).as("spouse is non-null").isNotNull();
 		assertThat(tb.getSpouse().getName().equals("Kerry") && tb.getSpouse().getAge() == 34).as("spouse name is Kerry and age is 34").isTrue();
 	}
 
 	@Test
-	public void testComplexObjectWithOldValueAccess() {
+	void complexObjectWithOldValueAccess() {
 		TestBean tb = new TestBean();
 		String newName = "Rod";
 		String tbString = "Kerry_34";
@@ -94,13 +93,13 @@ public class CustomEditorTests {
 		bw.setExtractOldValueForEditor(true);
 		bw.registerCustomEditor(ITestBean.class, new OldValueAccessingTestBeanEditor());
 		MutablePropertyValues pvs = new MutablePropertyValues();
-		pvs.addPropertyValue(new PropertyValue("age", new Integer(55)));
+		pvs.addPropertyValue(new PropertyValue("age", 55));
 		pvs.addPropertyValue(new PropertyValue("name", newName));
 		pvs.addPropertyValue(new PropertyValue("touchy", "valid"));
 		pvs.addPropertyValue(new PropertyValue("spouse", tbString));
 
 		bw.setPropertyValues(pvs);
-		assertThat(tb.getSpouse() != null).as("spouse is non-null").isTrue();
+		assertThat(tb.getSpouse()).as("spouse is non-null").isNotNull();
 		assertThat(tb.getSpouse().getName().equals("Kerry") && tb.getSpouse().getAge() == 34).as("spouse name is Kerry and age is 34").isTrue();
 		ITestBean spouse = tb.getSpouse();
 
@@ -109,7 +108,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCustomEditorForSingleProperty() {
+	void customEditorForSingleProperty() {
 		TestBean tb = new TestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(String.class, "name", new PropertyEditorSupport() {
@@ -127,7 +126,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCustomEditorForAllStringProperties() {
+	void customEditorForAllStringProperties() {
 		TestBean tb = new TestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(String.class, new PropertyEditorSupport() {
@@ -145,7 +144,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCustomEditorForSingleNestedProperty() {
+	void customEditorForSingleNestedProperty() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 		BeanWrapper bw = new BeanWrapperImpl(tb);
@@ -164,7 +163,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCustomEditorForAllNestedStringProperties() {
+	void customEditorForAllNestedStringProperties() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 		BeanWrapper bw = new BeanWrapperImpl(tb);
@@ -183,7 +182,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testDefaultBooleanEditorForPrimitiveType() {
+	void defaultBooleanEditorForPrimitiveType() {
 		BooleanTestBean tb = new BooleanTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 
@@ -193,43 +192,38 @@ public class CustomEditorTests {
 
 		bw.setPropertyValue("bool1", "false");
 		assertThat(Boolean.FALSE.equals(bw.getPropertyValue("bool1"))).as("Correct bool1 value").isTrue();
-		boolean condition4 = !tb.isBool1();
-		assertThat(condition4).as("Correct bool1 value").isTrue();
+		assertThat(tb.isBool1()).as("Correct bool1 value").isFalse();
 
 		bw.setPropertyValue("bool1", "  true  ");
 		assertThat(tb.isBool1()).as("Correct bool1 value").isTrue();
 
 		bw.setPropertyValue("bool1", "  false  ");
-		boolean condition3 = !tb.isBool1();
-		assertThat(condition3).as("Correct bool1 value").isTrue();
+		assertThat(tb.isBool1()).as("Correct bool1 value").isFalse();
 
 		bw.setPropertyValue("bool1", "on");
 		assertThat(tb.isBool1()).as("Correct bool1 value").isTrue();
 
 		bw.setPropertyValue("bool1", "off");
-		boolean condition2 = !tb.isBool1();
-		assertThat(condition2).as("Correct bool1 value").isTrue();
+		assertThat(tb.isBool1()).as("Correct bool1 value").isFalse();
 
 		bw.setPropertyValue("bool1", "yes");
 		assertThat(tb.isBool1()).as("Correct bool1 value").isTrue();
 
 		bw.setPropertyValue("bool1", "no");
-		boolean condition1 = !tb.isBool1();
-		assertThat(condition1).as("Correct bool1 value").isTrue();
+		assertThat(tb.isBool1()).as("Correct bool1 value").isFalse();
 
 		bw.setPropertyValue("bool1", "1");
 		assertThat(tb.isBool1()).as("Correct bool1 value").isTrue();
 
 		bw.setPropertyValue("bool1", "0");
-		boolean condition = !tb.isBool1();
-		assertThat(condition).as("Correct bool1 value").isTrue();
+		assertThat(tb.isBool1()).as("Correct bool1 value").isFalse();
 
 		assertThatExceptionOfType(BeansException.class).isThrownBy(() ->
 				bw.setPropertyValue("bool1", "argh"));
 	}
 
 	@Test
-	public void testDefaultBooleanEditorForWrapperType() {
+	void defaultBooleanEditorForWrapperType() {
 		BooleanTestBean tb = new BooleanTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 
@@ -239,36 +233,32 @@ public class CustomEditorTests {
 
 		bw.setPropertyValue("bool2", "false");
 		assertThat(Boolean.FALSE.equals(bw.getPropertyValue("bool2"))).as("Correct bool2 value").isTrue();
-		boolean condition3 = !tb.getBool2().booleanValue();
-		assertThat(condition3).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "on");
 		assertThat(tb.getBool2().booleanValue()).as("Correct bool2 value").isTrue();
 
 		bw.setPropertyValue("bool2", "off");
-		boolean condition2 = !tb.getBool2().booleanValue();
-		assertThat(condition2).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "yes");
 		assertThat(tb.getBool2().booleanValue()).as("Correct bool2 value").isTrue();
 
 		bw.setPropertyValue("bool2", "no");
-		boolean condition1 = !tb.getBool2().booleanValue();
-		assertThat(condition1).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "1");
 		assertThat(tb.getBool2().booleanValue()).as("Correct bool2 value").isTrue();
 
 		bw.setPropertyValue("bool2", "0");
-		boolean condition = !tb.getBool2().booleanValue();
-		assertThat(condition).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "");
 		assertThat(tb.getBool2()).as("Correct bool2 value").isNull();
 	}
 
 	@Test
-	public void testCustomBooleanEditorWithAllowEmpty() {
+	void customBooleanEditorWithAllowEmpty() {
 		BooleanTestBean tb = new BooleanTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(Boolean.class, new CustomBooleanEditor(true));
@@ -279,37 +269,33 @@ public class CustomEditorTests {
 
 		bw.setPropertyValue("bool2", "false");
 		assertThat(Boolean.FALSE.equals(bw.getPropertyValue("bool2"))).as("Correct bool2 value").isTrue();
-		boolean condition3 = !tb.getBool2().booleanValue();
-		assertThat(condition3).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "on");
 		assertThat(tb.getBool2().booleanValue()).as("Correct bool2 value").isTrue();
 
 		bw.setPropertyValue("bool2", "off");
-		boolean condition2 = !tb.getBool2().booleanValue();
-		assertThat(condition2).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "yes");
 		assertThat(tb.getBool2().booleanValue()).as("Correct bool2 value").isTrue();
 
 		bw.setPropertyValue("bool2", "no");
-		boolean condition1 = !tb.getBool2().booleanValue();
-		assertThat(condition1).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "1");
 		assertThat(tb.getBool2().booleanValue()).as("Correct bool2 value").isTrue();
 
 		bw.setPropertyValue("bool2", "0");
-		boolean condition = !tb.getBool2().booleanValue();
-		assertThat(condition).as("Correct bool2 value").isTrue();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isFalse();
 
 		bw.setPropertyValue("bool2", "");
-		assertThat(bw.getPropertyValue("bool2") == null).as("Correct bool2 value").isTrue();
-		assertThat(tb.getBool2() == null).as("Correct bool2 value").isTrue();
+		assertThat(bw.getPropertyValue("bool2")).as("Correct bool2 value").isNull();
+		assertThat(tb.getBool2()).as("Correct bool2 value").isNull();
 	}
 
 	@Test
-	public void testCustomBooleanEditorWithSpecialTrueAndFalseStrings() throws Exception {
+	void customBooleanEditorWithSpecialTrueAndFalseStrings() {
 		String trueString = "pechorin";
 		String falseString = "nash";
 
@@ -333,7 +319,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testDefaultNumberEditor() {
+	void defaultNumberEditor() {
 		NumberTestBean tb = new NumberTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 
@@ -350,34 +336,34 @@ public class CustomEditorTests {
 		bw.setPropertyValue("double2", "6.1");
 		bw.setPropertyValue("bigDecimal", "4.5");
 
-		assertThat(new Short("1").equals(bw.getPropertyValue("short1"))).as("Correct short1 value").isTrue();
-		assertThat(tb.getShort1() == 1).as("Correct short1 value").isTrue();
-		assertThat(new Short("2").equals(bw.getPropertyValue("short2"))).as("Correct short2 value").isTrue();
-		assertThat(new Short("2").equals(tb.getShort2())).as("Correct short2 value").isTrue();
-		assertThat(new Integer("7").equals(bw.getPropertyValue("int1"))).as("Correct int1 value").isTrue();
-		assertThat(tb.getInt1() == 7).as("Correct int1 value").isTrue();
-		assertThat(new Integer("8").equals(bw.getPropertyValue("int2"))).as("Correct int2 value").isTrue();
-		assertThat(new Integer("8").equals(tb.getInt2())).as("Correct int2 value").isTrue();
-		assertThat(new Long("5").equals(bw.getPropertyValue("long1"))).as("Correct long1 value").isTrue();
-		assertThat(tb.getLong1() == 5).as("Correct long1 value").isTrue();
-		assertThat(new Long("6").equals(bw.getPropertyValue("long2"))).as("Correct long2 value").isTrue();
-		assertThat(new Long("6").equals(tb.getLong2())).as("Correct long2 value").isTrue();
-		assertThat(new BigInteger("3").equals(bw.getPropertyValue("bigInteger"))).as("Correct bigInteger value").isTrue();
-		assertThat(new BigInteger("3").equals(tb.getBigInteger())).as("Correct bigInteger value").isTrue();
-		assertThat(new Float("7.1").equals(bw.getPropertyValue("float1"))).as("Correct float1 value").isTrue();
-		assertThat(new Float("7.1").equals(new Float(tb.getFloat1()))).as("Correct float1 value").isTrue();
-		assertThat(new Float("8.1").equals(bw.getPropertyValue("float2"))).as("Correct float2 value").isTrue();
-		assertThat(new Float("8.1").equals(tb.getFloat2())).as("Correct float2 value").isTrue();
-		assertThat(new Double("5.1").equals(bw.getPropertyValue("double1"))).as("Correct double1 value").isTrue();
-		assertThat(tb.getDouble1() == 5.1).as("Correct double1 value").isTrue();
-		assertThat(new Double("6.1").equals(bw.getPropertyValue("double2"))).as("Correct double2 value").isTrue();
-		assertThat(new Double("6.1").equals(tb.getDouble2())).as("Correct double2 value").isTrue();
-		assertThat(new BigDecimal("4.5").equals(bw.getPropertyValue("bigDecimal"))).as("Correct bigDecimal value").isTrue();
-		assertThat(new BigDecimal("4.5").equals(tb.getBigDecimal())).as("Correct bigDecimal value").isTrue();
+		assertThat(Short.valueOf("1")).as("Correct short1 value").isEqualTo(bw.getPropertyValue("short1"));
+		assertThat(tb.getShort1()).as("Correct short1 value").isOne();
+		assertThat(Short.valueOf("2")).as("Correct short2 value").isEqualTo(bw.getPropertyValue("short2"));
+		assertThat(Short.valueOf("2")).as("Correct short2 value").isEqualTo(tb.getShort2());
+		assertThat(Integer.valueOf("7")).as("Correct int1 value").isEqualTo(bw.getPropertyValue("int1"));
+		assertThat(tb.getInt1()).as("Correct int1 value").isEqualTo(7);
+		assertThat(Integer.valueOf("8")).as("Correct int2 value").isEqualTo(bw.getPropertyValue("int2"));
+		assertThat(Integer.valueOf("8")).as("Correct int2 value").isEqualTo(tb.getInt2());
+		assertThat(Long.valueOf("5")).as("Correct long1 value").isEqualTo(bw.getPropertyValue("long1"));
+		assertThat(tb.getLong1()).as("Correct long1 value").isEqualTo(5);
+		assertThat(Long.valueOf("6")).as("Correct long2 value").isEqualTo(bw.getPropertyValue("long2"));
+		assertThat(Long.valueOf("6")).as("Correct long2 value").isEqualTo(tb.getLong2());
+		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(bw.getPropertyValue("bigInteger"));
+		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(tb.getBigInteger());
+		assertThat(Float.valueOf("7.1")).as("Correct float1 value").isEqualTo(bw.getPropertyValue("float1"));
+		assertThat(Float.valueOf("7.1")).as("Correct float1 value").isEqualTo(tb.getFloat1());
+		assertThat(Float.valueOf("8.1")).as("Correct float2 value").isEqualTo(bw.getPropertyValue("float2"));
+		assertThat(Float.valueOf("8.1")).as("Correct float2 value").isEqualTo(tb.getFloat2());
+		assertThat(Double.valueOf("5.1")).as("Correct double1 value").isEqualTo(bw.getPropertyValue("double1"));
+		assertThat(tb.getDouble1()).as("Correct double1 value").isEqualTo(5.1);
+		assertThat(Double.valueOf("6.1")).as("Correct double2 value").isEqualTo(bw.getPropertyValue("double2"));
+		assertThat(Double.valueOf("6.1")).as("Correct double2 value").isEqualTo(tb.getDouble2());
+		assertThat(new BigDecimal("4.5")).as("Correct bigDecimal value").isEqualTo(bw.getPropertyValue("bigDecimal"));
+		assertThat(new BigDecimal("4.5")).as("Correct bigDecimal value").isEqualTo(tb.getBigDecimal());
 	}
 
 	@Test
-	public void testCustomNumberEditorWithoutAllowEmpty() {
+	void customNumberEditorWithoutAllowEmpty() {
 		NumberFormat nf = NumberFormat.getNumberInstance(Locale.GERMAN);
 		NumberTestBean tb = new NumberTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
@@ -407,34 +393,34 @@ public class CustomEditorTests {
 		bw.setPropertyValue("double2", "6,1");
 		bw.setPropertyValue("bigDecimal", "4,5");
 
-		assertThat(new Short("1").equals(bw.getPropertyValue("short1"))).as("Correct short1 value").isTrue();
-		assertThat(tb.getShort1() == 1).as("Correct short1 value").isTrue();
-		assertThat(new Short("2").equals(bw.getPropertyValue("short2"))).as("Correct short2 value").isTrue();
-		assertThat(new Short("2").equals(tb.getShort2())).as("Correct short2 value").isTrue();
-		assertThat(new Integer("7").equals(bw.getPropertyValue("int1"))).as("Correct int1 value").isTrue();
-		assertThat(tb.getInt1() == 7).as("Correct int1 value").isTrue();
-		assertThat(new Integer("8").equals(bw.getPropertyValue("int2"))).as("Correct int2 value").isTrue();
-		assertThat(new Integer("8").equals(tb.getInt2())).as("Correct int2 value").isTrue();
-		assertThat(new Long("5").equals(bw.getPropertyValue("long1"))).as("Correct long1 value").isTrue();
-		assertThat(tb.getLong1() == 5).as("Correct long1 value").isTrue();
-		assertThat(new Long("6").equals(bw.getPropertyValue("long2"))).as("Correct long2 value").isTrue();
-		assertThat(new Long("6").equals(tb.getLong2())).as("Correct long2 value").isTrue();
-		assertThat(new BigInteger("3").equals(bw.getPropertyValue("bigInteger"))).as("Correct bigInteger value").isTrue();
-		assertThat(new BigInteger("3").equals(tb.getBigInteger())).as("Correct bigInteger value").isTrue();
-		assertThat(new Float("7.1").equals(bw.getPropertyValue("float1"))).as("Correct float1 value").isTrue();
-		assertThat(new Float("7.1").equals(new Float(tb.getFloat1()))).as("Correct float1 value").isTrue();
-		assertThat(new Float("8.1").equals(bw.getPropertyValue("float2"))).as("Correct float2 value").isTrue();
-		assertThat(new Float("8.1").equals(tb.getFloat2())).as("Correct float2 value").isTrue();
-		assertThat(new Double("5.1").equals(bw.getPropertyValue("double1"))).as("Correct double1 value").isTrue();
-		assertThat(tb.getDouble1() == 5.1).as("Correct double1 value").isTrue();
-		assertThat(new Double("6.1").equals(bw.getPropertyValue("double2"))).as("Correct double2 value").isTrue();
-		assertThat(new Double("6.1").equals(tb.getDouble2())).as("Correct double2 value").isTrue();
-		assertThat(new BigDecimal("4.5").equals(bw.getPropertyValue("bigDecimal"))).as("Correct bigDecimal value").isTrue();
-		assertThat(new BigDecimal("4.5").equals(tb.getBigDecimal())).as("Correct bigDecimal value").isTrue();
+		assertThat(bw.getPropertyValue("short1")).as("Correct short1 value").isEqualTo(Short.valueOf("1"));
+		assertThat(tb.getShort1()).as("Correct short1 value").isOne();
+		assertThat(bw.getPropertyValue("short2")).as("Correct short2 value").isEqualTo(Short.valueOf("2"));
+		assertThat(tb.getShort2()).as("Correct short2 value").isEqualTo(Short.valueOf("2"));
+		assertThat(bw.getPropertyValue("int1")).as("Correct int1 value").isEqualTo(Integer.valueOf("7"));
+		assertThat(tb.getInt1()).as("Correct int1 value").isEqualTo(7);
+		assertThat(bw.getPropertyValue("int2")).as("Correct int2 value").isEqualTo(Integer.valueOf("8"));
+		assertThat(tb.getInt2()).as("Correct int2 value").isEqualTo(Integer.valueOf("8"));
+		assertThat(bw.getPropertyValue("long1")).as("Correct long1 value").isEqualTo(Long.valueOf("5"));
+		assertThat(tb.getLong1()).as("Correct long1 value").isEqualTo(5);
+		assertThat(bw.getPropertyValue("long2")).as("Correct long2 value").isEqualTo(Long.valueOf("6"));
+		assertThat(tb.getLong2()).as("Correct long2 value").isEqualTo(Long.valueOf("6"));
+		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(bw.getPropertyValue("bigInteger"));
+		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(tb.getBigInteger());
+		assertThat(bw.getPropertyValue("float1")).as("Correct float1 value").isEqualTo(Float.valueOf("7.1"));
+		assertThat(Float.valueOf(tb.getFloat1())).as("Correct float1 value").isEqualTo(Float.valueOf("7.1"));
+		assertThat(bw.getPropertyValue("float2")).as("Correct float2 value").isEqualTo(Float.valueOf("8.1"));
+		assertThat(tb.getFloat2()).as("Correct float2 value").isEqualTo(Float.valueOf("8.1"));
+		assertThat(bw.getPropertyValue("double1")).as("Correct double1 value").isEqualTo(Double.valueOf("5.1"));
+		assertThat(tb.getDouble1()).as("Correct double1 value").isEqualTo(5.1);
+		assertThat(bw.getPropertyValue("double2")).as("Correct double2 value").isEqualTo(Double.valueOf("6.1"));
+		assertThat(tb.getDouble2()).as("Correct double2 value").isEqualTo(Double.valueOf("6.1"));
+		assertThat(new BigDecimal("4.5")).as("Correct bigDecimal value").isEqualTo(bw.getPropertyValue("bigDecimal"));
+		assertThat(new BigDecimal("4.5")).as("Correct bigDecimal value").isEqualTo(tb.getBigDecimal());
 	}
 
 	@Test
-	public void testCustomNumberEditorWithAllowEmpty() {
+	void customNumberEditorWithAllowEmpty() {
 		NumberFormat nf = NumberFormat.getNumberInstance(Locale.GERMAN);
 		NumberTestBean tb = new NumberTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
@@ -443,14 +429,14 @@ public class CustomEditorTests {
 
 		bw.setPropertyValue("long1", "5");
 		bw.setPropertyValue("long2", "6");
-		assertThat(new Long("5").equals(bw.getPropertyValue("long1"))).as("Correct long1 value").isTrue();
-		assertThat(tb.getLong1() == 5).as("Correct long1 value").isTrue();
-		assertThat(new Long("6").equals(bw.getPropertyValue("long2"))).as("Correct long2 value").isTrue();
-		assertThat(new Long("6").equals(tb.getLong2())).as("Correct long2 value").isTrue();
+		assertThat(Long.valueOf("5").equals(bw.getPropertyValue("long1"))).as("Correct long1 value").isTrue();
+		assertThat(tb.getLong1()).as("Correct long1 value").isEqualTo(5);
+		assertThat(Long.valueOf("6").equals(bw.getPropertyValue("long2"))).as("Correct long2 value").isTrue();
+		assertThat(Long.valueOf("6").equals(tb.getLong2())).as("Correct long2 value").isTrue();
 
 		bw.setPropertyValue("long2", "");
-		assertThat(bw.getPropertyValue("long2") == null).as("Correct long2 value").isTrue();
-		assertThat(tb.getLong2() == null).as("Correct long2 value").isTrue();
+		assertThat(bw.getPropertyValue("long2")).as("Correct long2 value").isNull();
+		assertThat(tb.getLong2()).as("Correct long2 value").isNull();
 		assertThatExceptionOfType(BeansException.class).isThrownBy(() ->
 				bw.setPropertyValue("long1", ""));
 		assertThat(bw.getPropertyValue("long1")).isEqualTo(5L);
@@ -458,7 +444,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCustomNumberEditorWithFrenchBigDecimal() throws Exception {
+	void customNumberEditorWithFrenchBigDecimal() {
 		NumberFormat nf = NumberFormat.getNumberInstance(Locale.FRENCH);
 		NumberTestBean tb = new NumberTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
@@ -475,14 +461,14 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testParseShortGreaterThanMaxValueWithoutNumberFormat() {
+	void parseShortGreaterThanMaxValueWithoutNumberFormat() {
 		CustomNumberEditor editor = new CustomNumberEditor(Short.class, true);
 		assertThatExceptionOfType(NumberFormatException.class).as("greater than Short.MAX_VALUE + 1").isThrownBy(() ->
 			editor.setAsText(String.valueOf(Short.MAX_VALUE + 1)));
 	}
 
 	@Test
-	public void testByteArrayPropertyEditor() {
+	void byteArrayPropertyEditor() {
 		PrimitiveArrayBean bean = new PrimitiveArrayBean();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.setPropertyValue("byteArray", "myvalue");
@@ -490,7 +476,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCharArrayPropertyEditor() {
+	void charArrayPropertyEditor() {
 		PrimitiveArrayBean bean = new PrimitiveArrayBean();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.setPropertyValue("charArray", "myvalue");
@@ -498,11 +484,11 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCharacterEditor() {
+	void characterEditor() {
 		CharBean cb = new CharBean();
 		BeanWrapper bw = new BeanWrapperImpl(cb);
 
-		bw.setPropertyValue("myChar", new Character('c'));
+		bw.setPropertyValue("myChar", 'c');
 		assertThat(cb.getMyChar()).isEqualTo('c');
 
 		bw.setPropertyValue("myChar", "c");
@@ -520,89 +506,89 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCharacterEditorWithAllowEmpty() {
+	void characterEditorWithAllowEmpty() {
 		CharBean cb = new CharBean();
 		BeanWrapper bw = new BeanWrapperImpl(cb);
 		bw.registerCustomEditor(Character.class, new CharacterEditor(true));
 
-		bw.setPropertyValue("myCharacter", new Character('c'));
-		assertThat(cb.getMyCharacter()).isEqualTo(new Character('c'));
+		bw.setPropertyValue("myCharacter", 'c');
+		assertThat(cb.getMyCharacter()).isEqualTo(Character.valueOf('c'));
 
 		bw.setPropertyValue("myCharacter", "c");
-		assertThat(cb.getMyCharacter()).isEqualTo(new Character('c'));
+		assertThat(cb.getMyCharacter()).isEqualTo(Character.valueOf('c'));
 
 		bw.setPropertyValue("myCharacter", "\u0041");
-		assertThat(cb.getMyCharacter()).isEqualTo(new Character('A'));
+		assertThat(cb.getMyCharacter()).isEqualTo(Character.valueOf('A'));
 
 		bw.setPropertyValue("myCharacter", " ");
-		assertThat(cb.getMyCharacter()).isEqualTo(new Character(' '));
+		assertThat(cb.getMyCharacter()).isEqualTo(Character.valueOf(' '));
 
 		bw.setPropertyValue("myCharacter", "");
 		assertThat(cb.getMyCharacter()).isNull();
 	}
 
 	@Test
-	public void testCharacterEditorSetAsTextWithStringLongerThanOneCharacter() throws Exception {
+	void characterEditorSetAsTextWithStringLongerThanOneCharacter() {
 		PropertyEditor charEditor = new CharacterEditor(false);
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				charEditor.setAsText("ColdWaterCanyon"));
 	}
 
 	@Test
-	public void testCharacterEditorGetAsTextReturnsEmptyStringIfValueIsNull() throws Exception {
+	void characterEditorGetAsTextReturnsEmptyStringIfValueIsNull() {
 		PropertyEditor charEditor = new CharacterEditor(false);
-		assertThat(charEditor.getAsText()).isEqualTo("");
+		assertThat(charEditor.getAsText()).isEmpty();
 		charEditor = new CharacterEditor(true);
 		charEditor.setAsText(null);
-		assertThat(charEditor.getAsText()).isEqualTo("");
+		assertThat(charEditor.getAsText()).isEmpty();
 		charEditor.setAsText("");
-		assertThat(charEditor.getAsText()).isEqualTo("");
+		assertThat(charEditor.getAsText()).isEmpty();
 		charEditor.setAsText(" ");
 		assertThat(charEditor.getAsText()).isEqualTo(" ");
 	}
 
 	@Test
-	public void testCharacterEditorSetAsTextWithNullNotAllowingEmptyAsNull() throws Exception {
+	void characterEditorSetAsTextWithNullNotAllowingEmptyAsNull() {
 		PropertyEditor charEditor = new CharacterEditor(false);
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				charEditor.setAsText(null));
 	}
 
 	@Test
-	public void testClassEditor() {
+	void classEditor() {
 		PropertyEditor classEditor = new ClassEditor();
 		classEditor.setAsText(TestBean.class.getName());
 		assertThat(classEditor.getValue()).isEqualTo(TestBean.class);
 		assertThat(classEditor.getAsText()).isEqualTo(TestBean.class.getName());
 
 		classEditor.setAsText(null);
-		assertThat(classEditor.getAsText()).isEqualTo("");
+		assertThat(classEditor.getAsText()).isEmpty();
 		classEditor.setAsText("");
-		assertThat(classEditor.getAsText()).isEqualTo("");
+		assertThat(classEditor.getAsText()).isEmpty();
 		classEditor.setAsText("\t  ");
-		assertThat(classEditor.getAsText()).isEqualTo("");
+		assertThat(classEditor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testClassEditorWithNonExistentClass() throws Exception {
+	void classEditorWithNonExistentClass() {
 		PropertyEditor classEditor = new ClassEditor();
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				classEditor.setAsText("hairdresser.on.Fire"));
 	}
 
 	@Test
-	public void testClassEditorWithArray() {
+	void classEditorWithArray() {
 		PropertyEditor classEditor = new ClassEditor();
-		classEditor.setAsText("org.springframework.tests.sample.beans.TestBean[]");
+		classEditor.setAsText("org.springframework.beans.testfixture.beans.TestBean[]");
 		assertThat(classEditor.getValue()).isEqualTo(TestBean[].class);
-		assertThat(classEditor.getAsText()).isEqualTo("org.springframework.tests.sample.beans.TestBean[]");
+		assertThat(classEditor.getAsText()).isEqualTo("org.springframework.beans.testfixture.beans.TestBean[]");
 	}
 
 	/*
 	* SPR_2165 - ClassEditor is inconsistent with multidimensional arrays
 	*/
 	@Test
-	public void testGetAsTextWithTwoDimensionalArray() throws Exception {
+	void getAsTextWithTwoDimensionalArray() {
 		String[][] chessboard = new String[8][8];
 		ClassEditor editor = new ClassEditor();
 		editor.setValue(chessboard.getClass());
@@ -613,7 +599,7 @@ public class CustomEditorTests {
 	 * SPR_2165 - ClassEditor is inconsistent with multidimensional arrays
 	 */
 	@Test
-	public void testGetAsTextWithRidiculousMultiDimensionalArray() throws Exception {
+	void getAsTextWithRidiculousMultiDimensionalArray() {
 		String[][][][][] ridiculousChessboard = new String[8][4][0][1][3];
 		ClassEditor editor = new ClassEditor();
 		editor.setValue(ridiculousChessboard.getClass());
@@ -621,7 +607,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testFileEditor() {
+	void fileEditor() {
 		PropertyEditor fileEditor = new FileEditor();
 		fileEditor.setAsText("file:myfile.txt");
 		assertThat(fileEditor.getValue()).isEqualTo(new File("myfile.txt"));
@@ -629,7 +615,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testFileEditorWithRelativePath() {
+	void fileEditorWithRelativePath() {
 		PropertyEditor fileEditor = new FileEditor();
 		try {
 			fileEditor.setAsText("myfile.txt");
@@ -641,7 +627,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testFileEditorWithAbsolutePath() {
+	void fileEditorWithAbsolutePath() {
 		PropertyEditor fileEditor = new FileEditor();
 		// testing on Windows
 		if (new File("C:/myfile.txt").isAbsolute()) {
@@ -656,18 +642,22 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testLocaleEditor() {
+	void localeEditor() {
 		PropertyEditor localeEditor = new LocaleEditor();
 		localeEditor.setAsText("en_CA");
 		assertThat(localeEditor.getValue()).isEqualTo(Locale.CANADA);
 		assertThat(localeEditor.getAsText()).isEqualTo("en_CA");
 
 		localeEditor = new LocaleEditor();
-		assertThat(localeEditor.getAsText()).isEqualTo("");
+		localeEditor.setAsText("zh-Hans");
+		assertThat(localeEditor.getValue()).isEqualTo(Locale.forLanguageTag("zh-Hans"));
+
+		localeEditor = new LocaleEditor();
+		assertThat(localeEditor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testPatternEditor() {
+	void patternEditor() {
 		final String REGEX = "a.*";
 
 		PropertyEditor patternEditor = new PatternEditor();
@@ -676,15 +666,15 @@ public class CustomEditorTests {
 		assertThat(patternEditor.getAsText()).isEqualTo(REGEX);
 
 		patternEditor = new PatternEditor();
-		assertThat(patternEditor.getAsText()).isEqualTo("");
+		assertThat(patternEditor.getAsText()).isEmpty();
 
 		patternEditor = new PatternEditor();
 		patternEditor.setAsText(null);
-		assertThat(patternEditor.getAsText()).isEqualTo("");
+		assertThat(patternEditor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testCustomBooleanEditor() {
+	void customBooleanEditor() {
 		CustomBooleanEditor editor = new CustomBooleanEditor(false);
 
 		editor.setAsText("true");
@@ -696,15 +686,15 @@ public class CustomEditorTests {
 		assertThat(editor.getAsText()).isEqualTo("false");
 
 		editor.setValue(null);
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				editor.setAsText(null));
 	}
 
 	@Test
-	public void testCustomBooleanEditorWithEmptyAsNull() {
+	void customBooleanEditorWithEmptyAsNull() {
 		CustomBooleanEditor editor = new CustomBooleanEditor(true);
 
 		editor.setAsText("true");
@@ -716,34 +706,34 @@ public class CustomEditorTests {
 		assertThat(editor.getAsText()).isEqualTo("false");
 
 		editor.setValue(null);
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testCustomDateEditor() {
-		CustomDateEditor editor = new CustomDateEditor(null, false);
+	void customDateEditor() {
+		CustomDateEditor editor = new CustomDateEditor(new SimpleDateFormat("MM/dd/yyyy"), false);
 		editor.setValue(null);
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testCustomDateEditorWithEmptyAsNull() {
-		CustomDateEditor editor = new CustomDateEditor(null, true);
+	void customDateEditorWithEmptyAsNull() {
+		CustomDateEditor editor = new CustomDateEditor(new SimpleDateFormat("MM/dd/yyyy"), true);
 		editor.setValue(null);
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testCustomDateEditorWithExactDateLength() {
+	void customDateEditorWithExactDateLength() {
 		int maxLength = 10;
 		String validDate = "01/01/2005";
 		String invalidDate = "01/01/05";
 
-		assertThat(validDate.length() == maxLength).isTrue();
-		assertThat(invalidDate.length() == maxLength).isFalse();
+		assertThat(validDate).hasSize(maxLength);
+		assertThat(invalidDate.length()).isNotEqualTo(maxLength);
 
 		CustomDateEditor editor = new CustomDateEditor(new SimpleDateFormat("MM/dd/yyyy"), true, maxLength);
 		editor.setAsText(validDate);
@@ -753,39 +743,39 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testCustomNumberEditor() {
+	void customNumberEditor() {
 		CustomNumberEditor editor = new CustomNumberEditor(Integer.class, false);
 		editor.setAsText("5");
-		assertThat(editor.getValue()).isEqualTo(new Integer(5));
+		assertThat(editor.getValue()).isEqualTo(5);
 		assertThat(editor.getAsText()).isEqualTo("5");
 		editor.setValue(null);
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testCustomNumberEditorWithHex() {
+	void customNumberEditorWithHex() {
 		CustomNumberEditor editor = new CustomNumberEditor(Integer.class, false);
 		editor.setAsText("0x" + Integer.toHexString(64));
-		assertThat(editor.getValue()).isEqualTo(new Integer(64));
+		assertThat(editor.getValue()).isEqualTo(64);
 	}
 
 	@Test
-	public void testCustomNumberEditorWithEmptyAsNull() {
+	void customNumberEditorWithEmptyAsNull() {
 		CustomNumberEditor editor = new CustomNumberEditor(Integer.class, true);
 		editor.setAsText("5");
-		assertThat(editor.getValue()).isEqualTo(new Integer(5));
+		assertThat(editor.getValue()).isEqualTo(5);
 		assertThat(editor.getAsText()).isEqualTo("5");
 		editor.setAsText("");
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 		editor.setValue(null);
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testStringTrimmerEditor() {
+	void stringTrimmerEditor() {
 		StringTrimmerEditor editor = new StringTrimmerEditor(false);
 		editor.setAsText("test");
 		assertThat(editor.getValue()).isEqualTo("test");
@@ -795,15 +785,15 @@ public class CustomEditorTests {
 		assertThat(editor.getAsText()).isEqualTo("test");
 		editor.setAsText("");
 		assertThat(editor.getValue()).isEqualTo("");
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 		editor.setValue(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 		editor.setAsText(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testStringTrimmerEditorWithEmptyAsNull() {
+	void stringTrimmerEditorWithEmptyAsNull() {
 		StringTrimmerEditor editor = new StringTrimmerEditor(true);
 		editor.setAsText("test");
 		assertThat(editor.getValue()).isEqualTo("test");
@@ -812,14 +802,14 @@ public class CustomEditorTests {
 		assertThat(editor.getValue()).isEqualTo("test");
 		assertThat(editor.getAsText()).isEqualTo("test");
 		editor.setAsText("  ");
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 		editor.setValue(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testStringTrimmerEditorWithCharsToDelete() {
+	void stringTrimmerEditorWithCharsToDelete() {
 		StringTrimmerEditor editor = new StringTrimmerEditor("\r\n\f", false);
 		editor.setAsText("te\ns\ft");
 		assertThat(editor.getValue()).isEqualTo("test");
@@ -829,13 +819,13 @@ public class CustomEditorTests {
 		assertThat(editor.getAsText()).isEqualTo("test");
 		editor.setAsText("");
 		assertThat(editor.getValue()).isEqualTo("");
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 		editor.setValue(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testStringTrimmerEditorWithCharsToDeleteAndEmptyAsNull() {
+	void stringTrimmerEditorWithCharsToDeleteAndEmptyAsNull() {
 		StringTrimmerEditor editor = new StringTrimmerEditor("\r\n\f", true);
 		editor.setAsText("te\ns\ft");
 		assertThat(editor.getValue()).isEqualTo("test");
@@ -844,14 +834,14 @@ public class CustomEditorTests {
 		assertThat(editor.getValue()).isEqualTo("test");
 		assertThat(editor.getAsText()).isEqualTo("test");
 		editor.setAsText(" \n\f ");
-		assertThat(editor.getValue()).isEqualTo(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getValue()).isNull();
+		assertThat(editor.getAsText()).isEmpty();
 		editor.setValue(null);
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testIndexedPropertiesWithCustomEditorForType() {
+	void indexedPropertiesWithCustomEditorForType() {
 		IndexedTestBean bean = new IndexedTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.registerCustomEditor(String.class, new PropertyEditorSupport() {
@@ -904,7 +894,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testIndexedPropertiesWithCustomEditorForProperty() {
+	void indexedPropertiesWithCustomEditorForProperty() {
 		IndexedTestBean bean = new IndexedTestBean(false);
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.registerCustomEditor(String.class, "array.name", new PropertyEditorSupport() {
@@ -971,7 +961,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testIndexedPropertiesWithIndividualCustomEditorForProperty() {
+	void indexedPropertiesWithIndividualCustomEditorForProperty() {
 		IndexedTestBean bean = new IndexedTestBean(false);
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.registerCustomEditor(String.class, "array[0].name", new PropertyEditorSupport() {
@@ -1056,7 +1046,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testNestedIndexedPropertiesWithCustomEditorForProperty() {
+	void nestedIndexedPropertiesWithCustomEditorForProperty() {
 		IndexedTestBean bean = new IndexedTestBean();
 		TestBean tb0 = bean.getArray()[0];
 		TestBean tb1 = bean.getArray()[1];
@@ -1140,7 +1130,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testNestedIndexedPropertiesWithIndexedCustomEditorForProperty() {
+	void nestedIndexedPropertiesWithIndexedCustomEditorForProperty() {
 		IndexedTestBean bean = new IndexedTestBean();
 		TestBean tb0 = bean.getArray()[0];
 		TestBean tb1 = bean.getArray()[1];
@@ -1191,7 +1181,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testIndexedPropertiesWithDirectAccessAndPropertyEditors() {
+	void indexedPropertiesWithDirectAccessAndPropertyEditors() {
 		IndexedTestBean bean = new IndexedTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.registerCustomEditor(TestBean.class, "array", new PropertyEditorSupport() {
@@ -1245,7 +1235,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testIndexedPropertiesWithDirectAccessAndSpecificPropertyEditors() {
+	void indexedPropertiesWithDirectAccessAndSpecificPropertyEditors() {
 		IndexedTestBean bean = new IndexedTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.registerCustomEditor(TestBean.class, "array[0]", new PropertyEditorSupport() {
@@ -1332,7 +1322,8 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testIndexedPropertiesWithListPropertyEditor() {
+	@SuppressWarnings("unchecked")
+	void indexedPropertiesWithListPropertyEditor() {
 		IndexedTestBean bean = new IndexedTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.registerCustomEditor(List.class, "list", new PropertyEditorSupport() {
@@ -1346,28 +1337,29 @@ public class CustomEditorTests {
 		bw.setPropertyValue("list", "1");
 		assertThat(((TestBean) bean.getList().get(0)).getName()).isEqualTo("list1");
 		bw.setPropertyValue("list[0]", "test");
-		assertThat(bean.getList().get(0)).isEqualTo("test");
+		assertThat(bean.getList()).singleElement().isEqualTo("test");
 	}
 
 	@Test
-	public void testConversionToOldCollections() throws PropertyVetoException {
+	void conversionToOldCollections() {
 		OldCollectionsBean tb = new OldCollectionsBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(Vector.class, new CustomCollectionEditor(Vector.class));
 		bw.registerCustomEditor(Hashtable.class, new CustomMapEditor(Hashtable.class));
 
 		bw.setPropertyValue("vector", new String[] {"a", "b"});
-		assertThat(tb.getVector().size()).isEqualTo(2);
-		assertThat(tb.getVector().get(0)).isEqualTo("a");
-		assertThat(tb.getVector().get(1)).isEqualTo("b");
+		assertThat(tb.getVector()).hasSize(2);
+		assertThat(tb.getVector()).element(0).isEqualTo("a");
+		assertThat(tb.getVector()).element(1).isEqualTo("b");
 
 		bw.setPropertyValue("hashtable", Collections.singletonMap("foo", "bar"));
-		assertThat(tb.getHashtable().size()).isEqualTo(1);
+		assertThat(tb.getHashtable()).hasSize(1);
 		assertThat(tb.getHashtable().get("foo")).isEqualTo("bar");
 	}
 
 	@Test
-	public void testUninitializedArrayPropertyWithCustomEditor() {
+	@SuppressWarnings("unchecked")
+	void uninitializedArrayPropertyWithCustomEditor() {
 		IndexedTestBean bean = new IndexedTestBean(false);
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		PropertyEditor pe = new CustomNumberEditor(Integer.class, true);
@@ -1375,7 +1367,7 @@ public class CustomEditorTests {
 		TestBean tb = new TestBean();
 		bw.setPropertyValue("list", new ArrayList<>());
 		bw.setPropertyValue("list[0]", tb);
-		assertThat(bean.getList().get(0)).isEqualTo(tb);
+		assertThat(bean.getList()).element(0).isEqualTo(tb);
 		assertThat(bw.findCustomEditor(int.class, "list.age")).isEqualTo(pe);
 		assertThat(bw.findCustomEditor(null, "list.age")).isEqualTo(pe);
 		assertThat(bw.findCustomEditor(int.class, "list[0].age")).isEqualTo(pe);
@@ -1383,7 +1375,7 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testArrayToArrayConversion() throws PropertyVetoException {
+	void arrayToArrayConversion() {
 		IndexedTestBean tb = new IndexedTestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(TestBean.class, new PropertyEditorSupport() {
@@ -1393,13 +1385,13 @@ public class CustomEditorTests {
 			}
 		});
 		bw.setPropertyValue("array", new String[] {"a", "b"});
-		assertThat(tb.getArray().length).isEqualTo(2);
+		assertThat(tb.getArray()).hasSize(2);
 		assertThat(tb.getArray()[0].getName()).isEqualTo("a");
 		assertThat(tb.getArray()[1].getName()).isEqualTo("b");
 	}
 
 	@Test
-	public void testArrayToStringConversion() throws PropertyVetoException {
+	void arrayToStringConversion() {
 		TestBean tb = new TestBean();
 		BeanWrapper bw = new BeanWrapperImpl(tb);
 		bw.registerCustomEditor(String.class, new PropertyEditorSupport() {
@@ -1408,16 +1400,16 @@ public class CustomEditorTests {
 				setValue("-" + text + "-");
 			}
 		});
-		bw.setPropertyValue("name", new String[] {"a", "b"});
+		bw.setPropertyValue("name", new String[]{"a", "b"});
 		assertThat(tb.getName()).isEqualTo("-a,b-");
 	}
 
 	@Test
-	public void testClassArrayEditorSunnyDay() throws Exception {
+	void classArrayEditorSunnyDay() {
 		ClassArrayEditor classArrayEditor = new ClassArrayEditor();
 		classArrayEditor.setAsText("java.lang.String,java.util.HashMap");
 		Class<?>[] classes = (Class<?>[]) classArrayEditor.getValue();
-		assertThat(classes.length).isEqualTo(2);
+		assertThat(classes).hasSize(2);
 		assertThat(classes[0]).isEqualTo(String.class);
 		assertThat(classes[1]).isEqualTo(HashMap.class);
 		assertThat(classArrayEditor.getAsText()).isEqualTo("java.lang.String,java.util.HashMap");
@@ -1426,11 +1418,11 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testClassArrayEditorSunnyDayWithArrayTypes() throws Exception {
+	void classArrayEditorSunnyDayWithArrayTypes() {
 		ClassArrayEditor classArrayEditor = new ClassArrayEditor();
 		classArrayEditor.setAsText("java.lang.String[],java.util.Map[],int[],float[][][]");
 		Class<?>[] classes = (Class<?>[]) classArrayEditor.getValue();
-		assertThat(classes.length).isEqualTo(4);
+		assertThat(classes).hasSize(4);
 		assertThat(classes[0]).isEqualTo(String[].class);
 		assertThat(classes[1]).isEqualTo(Map[].class);
 		assertThat(classes[2]).isEqualTo(int[].class);
@@ -1441,31 +1433,31 @@ public class CustomEditorTests {
 	}
 
 	@Test
-	public void testClassArrayEditorSetAsTextWithNull() throws Exception {
+	void classArrayEditorSetAsTextWithNull() {
 		ClassArrayEditor editor = new ClassArrayEditor();
 		editor.setAsText(null);
 		assertThat(editor.getValue()).isNull();
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testClassArrayEditorSetAsTextWithEmptyString() throws Exception {
+	void classArrayEditorSetAsTextWithEmptyString() {
 		ClassArrayEditor editor = new ClassArrayEditor();
 		editor.setAsText("");
 		assertThat(editor.getValue()).isNull();
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testClassArrayEditorSetAsTextWithWhitespaceString() throws Exception {
+	void classArrayEditorSetAsTextWithWhitespaceString() {
 		ClassArrayEditor editor = new ClassArrayEditor();
 		editor.setAsText("\n");
 		assertThat(editor.getValue()).isNull();
-		assertThat(editor.getAsText()).isEqualTo("");
+		assertThat(editor.getAsText()).isEmpty();
 	}
 
 	@Test
-	public void testCharsetEditor() throws Exception {
+	void charsetEditor() {
 		CharsetEditor editor = new CharsetEditor();
 		String name = "UTF-8";
 		editor.setAsText(name);
