@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,17 +18,21 @@ package org.springframework.context.annotation;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
-import java.util.Collections;
-import java.util.Iterator;
+import java.lang.annotation.Target;
+import java.util.Map;
 import java.util.Properties;
-import javax.inject.Inject;
 
-import org.junit.Test;
+import jakarta.inject.Inject;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.factory.BeanDefinitionStoreException;
 import org.springframework.beans.factory.FactoryBean;
+import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.annotation.AliasFor;
 import org.springframework.core.env.Environment;
 import org.springframework.core.env.MapPropertySource;
@@ -36,7 +40,7 @@ import org.springframework.core.env.MutablePropertySources;
 import org.springframework.core.io.support.EncodedResource;
 import org.springframework.core.io.support.PropertiesLoaderUtils;
 import org.springframework.core.io.support.PropertySourceFactory;
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.util.PlaceholderResolutionException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -46,61 +50,55 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  *
  * @author Chris Beams
  * @author Phillip Webb
+ * @author Sam Brannen
  * @since 3.1
  */
-public class PropertySourceAnnotationTests {
-
+class PropertySourceAnnotationTests {
 
 	@Test
-	public void withExplicitName() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithExplicitName.class);
-		ctx.refresh();
+	void withExplicitName() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithExplicitName.class);
 		assertThat(ctx.getEnvironment().getPropertySources().contains("p1")).as("property source p1 was not added").isTrue();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 
 		// assert that the property source was added last to the set of sources
-		String name;
 		MutablePropertySources sources = ctx.getEnvironment().getPropertySources();
-		Iterator<org.springframework.core.env.PropertySource<?>> iterator = sources.iterator();
-		do {
-			name = iterator.next().getName();
-		}
-		while (iterator.hasNext());
-
+		String name = sources.stream().toList().get(sources.size() - 1).getName();
 		assertThat(name).isEqualTo("p1");
+		ctx.close();
 	}
 
 	@Test
-	public void withImplicitName() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithImplicitName.class);
-		ctx.refresh();
-		assertThat(ctx.getEnvironment().getPropertySources().contains("class path resource [org/springframework/context/annotation/p1.properties]")).as("property source p1 was not added").isTrue();
+	void withImplicitName() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithImplicitName.class);
+		String name = "class path resource [org/springframework/context/annotation/p1.properties]";
+		assertThat(ctx.getEnvironment().getPropertySources().contains(name))
+				.as("property source p1 was not added").isTrue();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void withTestProfileBeans() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithTestProfileBeans.class);
-		ctx.refresh();
+	void withTestProfileBeans() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithTestProfileBeans.class);
 		assertThat(ctx.containsBean("testBean")).isTrue();
 		assertThat(ctx.containsBean("testProfileBean")).isTrue();
+		ctx.close();
 	}
 
 	/**
-	 * Tests the LIFO behavior of @PropertySource annotaitons.
-	 * The last one registered should 'win'.
+	 * Tests the LIFO behavior of @PropertySource annotations.
+	 * <p>The last one registered should 'win'.
 	 */
 	@Test
-	public void orderingIsLifo() {
+	void orderingIsLifo() {
 		{
 			AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
 			ctx.register(ConfigWithImplicitName.class, P2Config.class);
 			ctx.refresh();
 			// p2 should 'win' as it was registered last
 			assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p2TestBean");
+			ctx.close();
 		}
 
 		{
@@ -109,207 +107,262 @@ public class PropertySourceAnnotationTests {
 			ctx.refresh();
 			// p1 should 'win' as it was registered last
 			assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
+			ctx.close();
 		}
 	}
 
 	@Test
-	public void withCustomFactory() {
+	void withCustomFactory() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
 		ctx.register(ConfigWithImplicitName.class, WithCustomFactory.class);
 		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("P2TESTBEAN");
+		ctx.close();
 	}
 
 	@Test
-	public void withCustomFactoryAsMeta() {
+	void withCustomFactoryAsMeta() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
 		ctx.register(ConfigWithImplicitName.class, WithCustomFactoryAsMeta.class);
 		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("P2TESTBEAN");
+		ctx.close();
 	}
 
 	@Test
-	public void withUnresolvablePlaceholder() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithUnresolvablePlaceholder.class);
-		try {
-			ctx.refresh();
-		}
-		catch (BeanDefinitionStoreException ex) {
-			assertThat(ex.getCause() instanceof IllegalArgumentException).isTrue();
-		}
+	void withUnresolvablePlaceholder() {
+		assertThatExceptionOfType(BeanDefinitionStoreException.class)
+				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholder.class))
+				.withCauseInstanceOf(PlaceholderResolutionException.class);
 	}
 
 	@Test
-	public void withUnresolvablePlaceholderAndDefault() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithUnresolvablePlaceholderAndDefault.class);
-		ctx.refresh();
+	void withUnresolvablePlaceholderAndDefault() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholderAndDefault.class);
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void withResolvablePlaceholder() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithResolvablePlaceholder.class);
+	void withResolvablePlaceholder() {
 		System.setProperty("path.to.properties", "org/springframework/context/annotation");
-		ctx.refresh();
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithResolvablePlaceholder.class);
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 		System.clearProperty("path.to.properties");
+		ctx.close();
 	}
 
 	@Test
-	public void withResolvablePlaceholderAndFactoryBean() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithResolvablePlaceholderAndFactoryBean.class);
+	void withResolvablePlaceholderAndFactoryBean() {
 		System.setProperty("path.to.properties", "org/springframework/context/annotation");
-		ctx.refresh();
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithResolvablePlaceholderAndFactoryBean.class);
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 		System.clearProperty("path.to.properties");
+		ctx.close();
 	}
 
 	@Test
-	public void withEmptyResourceLocations() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithEmptyResourceLocations.class);
-		try {
-			ctx.refresh();
-		}
-		catch (BeanDefinitionStoreException ex) {
-			assertThat(ex.getCause() instanceof IllegalArgumentException).isTrue();
-		}
+	void withEmptyResourceLocations() {
+		assertThatExceptionOfType(BeanDefinitionStoreException.class)
+				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithEmptyResourceLocations.class))
+				.withCauseInstanceOf(IllegalArgumentException.class);
 	}
 
 	@Test
-	public void withNameAndMultipleResourceLocations() {
+	void withNameAndMultipleResourceLocations() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void withMultipleResourceLocations() {
+	void withMultipleResourceLocations() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void withPropertySources() {
+	void withRepeatedPropertySourcesInContainerAnnotation() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithPropertySources.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void withNamedPropertySources() {
+	void withRepeatedPropertySources() {
+		try (AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithRepeatedPropertySourceAnnotations.class)) {
+			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+			// p2 should 'win' as it was registered last
+			assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		}
+	}
+
+	@Test
+	void withRepeatedPropertySourcesOnComposedAnnotation() {
+		Class<?> configClass = ConfigWithRepeatedPropertySourceAnnotationsOnComposedAnnotation.class;
+		String key = "custom.config.package";
+
+		System.clearProperty(key);
+		try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
+			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+			// p2 should 'win' as it was registered last
+			assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		}
+
+		System.setProperty(key, "org/springframework/context/annotation");
+		try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
+			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3");
+			// p3 should 'win' as it was registered last
+			assertEnvironmentProperty(ctx, "testbean.name", "p3TestBean");
+		}
+		finally {
+			System.clearProperty(key);
+		}
+	}
+
+	@Test
+	void multipleComposedPropertySourceAnnotations() {  // gh-30941
+		ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(MultipleComposedAnnotationsConfig.class);
+		ctx.getBean(MultipleComposedAnnotationsConfig.class);
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
+		// p5 should 'win' as it is registered via the last "locally declared" direct annotation
+		assertEnvironmentProperty(ctx, "testbean.name", "p5TestBean");
+		ctx.close();
+	}
+
+	@Test
+	void multipleResourcesFromPropertySourcePattern() {  // gh-21325
+		ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(ResourcePatternConfig.class);
+		ctx.getBean(ResourcePatternConfig.class);
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
+		ctx.close();
+	}
+
+	@Test
+	void withNamedPropertySources() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNamedPropertySources.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void withMissingPropertySource() {
-		assertThatExceptionOfType(BeanDefinitionStoreException.class).isThrownBy(() ->
-				new AnnotationConfigApplicationContext(ConfigWithMissingPropertySource.class))
-			.withCauseInstanceOf(FileNotFoundException.class);
+	void withMissingPropertySource() {
+		assertThatExceptionOfType(BeanDefinitionStoreException.class)
+				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithMissingPropertySource.class))
+				.withCauseInstanceOf(FileNotFoundException.class);
 	}
 
 	@Test
-	public void withIgnoredPropertySource() {
+	void withIgnoredPropertySource() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithIgnoredPropertySource.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		ctx.close();
 	}
 
 	@Test
-	public void withSameSourceImportedInDifferentOrder() {
+	void withSameSourceImportedInDifferentOrder() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithSameSourceImportedInDifferentOrder.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void orderingWithAndWithoutNameAndMultipleResourceLocations() {
+	void orderingWithAndWithoutNameAndMultipleResourceLocations() {
 		// SPR-10820: p2 should 'win' as it was registered last
 		AnnotationConfigApplicationContext ctxWithName = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
 		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
-		assertThat(ctxWithName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctxWithName, "testbean.name", "p2TestBean");
+		assertEnvironmentProperty(ctxWithoutName, "testbean.name", "p2TestBean");
+		ctxWithName.close();
+		ctxWithoutName.close();
 	}
 
 	@Test
-	public void orderingWithAndWithoutNameAndFourResourceLocations() {
+	void orderingWithFourResourceLocations() {
 		// SPR-12198: p4 should 'win' as it was registered last
-		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
-		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p4TestBean");
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
+		assertEnvironmentProperty(ctx, "testbean.name", "p4TestBean");
+		ctx.close();
 	}
 
 	@Test
-	public void orderingDoesntReplaceExisting() throws Exception {
+	void orderingDoesntReplaceExisting() {
 		// SPR-12198: mySource should 'win' as it was registered manually
 		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext();
-		MapPropertySource mySource = new MapPropertySource("mine", Collections.singletonMap("testbean.name", "myTestBean"));
+		MapPropertySource mySource = new MapPropertySource("mine", Map.of("testbean.name", "myTestBean"));
 		ctxWithoutName.getEnvironment().getPropertySources().addLast(mySource);
 		ctxWithoutName.register(ConfigWithFourResourceLocations.class);
 		ctxWithoutName.refresh();
-		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("myTestBean");
-
+		assertEnvironmentProperty(ctxWithoutName, "testbean.name", "myTestBean");
+		ctxWithoutName.close();
 	}
 
+
+	private static void assertEnvironmentContainsProperties(ApplicationContext ctx, String... names) {
+		for (String name : names) {
+			assertThat(ctx.getEnvironment().containsProperty(name)).as("environment contains property '%s'", name).isTrue();
+		}
+	}
+
+	private static void assertEnvironmentProperty(ApplicationContext ctx, String name, Object value) {
+		assertThat(ctx.getEnvironment().getProperty(name)).as("environment property '%s'", name).isEqualTo(value);
+	}
+
+
 	@Configuration
-	@PropertySource(value="classpath:${unresolvable}/p1.properties")
+	@PropertySource("classpath:${unresolvable}/p1.properties")
 	static class ConfigWithUnresolvablePlaceholder {
 	}
 
 
 	@Configuration
-	@PropertySource(value="classpath:${unresolvable:org/springframework/context/annotation}/p1.properties")
+	@PropertySource("classpath:${unresolvable:org/springframework/context/annotation}/p1.properties")
 	static class ConfigWithUnresolvablePlaceholderAndDefault {
 
 		@Inject Environment env;
 
 		@Bean
-		public TestBean testBean() {
+		TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
 
 
 	@Configuration
-	@PropertySource(value="classpath:${path.to.properties}/p1.properties")
+	@PropertySource("classpath:${path.to.properties}/p1.properties")
 	static class ConfigWithResolvablePlaceholder {
 
 		@Inject Environment env;
 
 		@Bean
-		public TestBean testBean() {
+		TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
 
 
 	@Configuration
-	@PropertySource(value="classpath:${path.to.properties}/p1.properties")
+	@PropertySource("classpath:${path.to.properties}/p1.properties")
 	static class ConfigWithResolvablePlaceholderAndFactoryBean {
 
 		@Inject Environment env;
 
 		@Bean
-		public FactoryBean testBean() {
+		FactoryBean<TestBean> testBean() {
 			final String name = env.getProperty("testbean.name");
-			return new FactoryBean() {
+			return new FactoryBean<>() {
 				@Override
-				public Object getObject() {
+				public TestBean getObject() {
 					return new TestBean(name);
 				}
 				@Override
@@ -332,7 +385,7 @@ public class PropertySourceAnnotationTests {
 		@Inject Environment env;
 
 		@Bean
-		public TestBean testBean() {
+		TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
@@ -345,7 +398,7 @@ public class PropertySourceAnnotationTests {
 		@Inject Environment env;
 
 		@Bean
-		public TestBean testBean() {
+		TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
@@ -359,7 +412,7 @@ public class PropertySourceAnnotationTests {
 		@Inject Environment env;
 
 		@Bean @Profile("test")
-		public TestBean testBean() {
+		TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
@@ -378,26 +431,26 @@ public class PropertySourceAnnotationTests {
 
 
 	@Configuration
-	@MyPropertySource(value = "classpath:org/springframework/context/annotation/p2.properties")
+	@MyPropertySource("classpath:org/springframework/context/annotation/p2.properties")
 	static class WithCustomFactoryAsMeta {
 	}
 
 
 	@Retention(RetentionPolicy.RUNTIME)
 	@PropertySource(value = {}, factory = MyCustomFactory.class)
-	public @interface MyPropertySource {
+	@interface MyPropertySource {
 
 		@AliasFor(annotation = PropertySource.class)
 		String value();
 	}
 
 
-	public static class MyCustomFactory implements PropertySourceFactory {
+	static class MyCustomFactory implements PropertySourceFactory {
 
 		@Override
 		public org.springframework.core.env.PropertySource<?> createPropertySource(String name, EncodedResource resource) throws IOException {
 			Properties props = PropertiesLoaderUtils.loadProperties(resource);
-			return new org.springframework.core.env.PropertySource<Properties>("my" + name, props) {
+			return new org.springframework.core.env.PropertySource<>("my" + name, props) {
 				@Override
 				public Object getProperty(String name) {
 					String value = props.getProperty(name);
@@ -420,11 +473,10 @@ public class PropertySourceAnnotationTests {
 
 
 	@Configuration
-	@PropertySource(
-			value = {
-					"classpath:org/springframework/context/annotation/p1.properties",
-					"classpath:org/springframework/context/annotation/p2.properties"
-			})
+	@PropertySource({
+		"classpath:org/springframework/context/annotation/p1.properties",
+		"classpath:org/springframework/context/annotation/p2.properties"
+	})
 	static class ConfigWithMultipleResourceLocations {
 	}
 
@@ -432,9 +484,58 @@ public class PropertySourceAnnotationTests {
 	@Configuration
 	@PropertySources({
 		@PropertySource("classpath:org/springframework/context/annotation/p1.properties"),
-		@PropertySource("classpath:${base.package}/p2.properties"),
+		@PropertySource("classpath:${base.package}/p2.properties")
 	})
 	static class ConfigWithPropertySources {
+	}
+
+
+	@Configuration
+	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
+	@PropertySource(value = "classpath:${base.package}/p2.properties", ignoreResourceNotFound = true)
+	static class ConfigWithRepeatedPropertySourceAnnotations {
+	}
+
+
+	@Target(ElementType.TYPE)
+	@Retention(RetentionPolicy.RUNTIME)
+	@Configuration
+	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
+	@PropertySource(value = "classpath:${base.package}/p2.properties", ignoreResourceNotFound = true)
+	@PropertySource(value = "classpath:${custom.config.package:bogus/config}/p3.properties", ignoreResourceNotFound = true)
+	@interface ComposedConfiguration {
+	}
+
+	@ComposedConfiguration
+	static class ConfigWithRepeatedPropertySourceAnnotationsOnComposedAnnotation {
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
+	@interface PropertySource1 {
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@PropertySource("classpath:org/springframework/context/annotation/p2.properties")
+	@PropertySources({
+		@PropertySource("classpath:org/springframework/context/annotation/p3.properties"),
+	})
+	@interface PropertySource23 {
+	}
+
+	@Configuration
+	@PropertySource1
+	@PropertySource23
+	@PropertySources({
+		@PropertySource("classpath:org/springframework/context/annotation/p4.properties")
+	})
+	@PropertySource("classpath:org/springframework/context/annotation/p5.properties")
+	static class MultipleComposedAnnotationsConfig {
+	}
+
+
+	@PropertySource("classpath*:org/springframework/context/annotation/p?.properties")
+	static class ResourcePatternConfig {
 	}
 
 
@@ -469,7 +570,7 @@ public class PropertySourceAnnotationTests {
 
 
 	@Configuration
-	@PropertySource(value = {})
+	@PropertySource({})
 	static class ConfigWithEmptyResourceLocations {
 	}
 
@@ -480,8 +581,7 @@ public class PropertySourceAnnotationTests {
 		@PropertySource("classpath:org/springframework/context/annotation/p2.properties")
 	})
 	@Configuration
-	public static class ConfigWithSameSourceImportedInDifferentOrder {
-
+	static class ConfigWithSameSourceImportedInDifferentOrder {
 	}
 
 
@@ -490,18 +590,17 @@ public class PropertySourceAnnotationTests {
 		@PropertySource("classpath:org/springframework/context/annotation/p2.properties"),
 		@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
 	})
-	public static class ConfigImportedWithSameSourceImportedInDifferentOrder {
+	static class ConfigImportedWithSameSourceImportedInDifferentOrder {
 	}
 
 
 	@Configuration
-	@PropertySource(
-			value = {
-					"classpath:org/springframework/context/annotation/p1.properties",
-					"classpath:org/springframework/context/annotation/p2.properties",
-					"classpath:org/springframework/context/annotation/p3.properties",
-					"classpath:org/springframework/context/annotation/p4.properties"
-			})
+	@PropertySource({
+		"classpath:org/springframework/context/annotation/p1.properties",
+		"classpath:org/springframework/context/annotation/p2.properties",
+		"classpath:org/springframework/context/annotation/p3.properties",
+		"classpath:org/springframework/context/annotation/p4.properties"
+	})
 	static class ConfigWithFourResourceLocations {
 	}
 
