@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
 import java.util.AbstractList;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Currency;
@@ -33,7 +32,6 @@ import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -42,28 +40,28 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.TimeZone;
 import java.util.UUID;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.core.MethodParameter;
 import org.springframework.core.convert.ConversionFailedException;
 import org.springframework.core.convert.ConverterNotFoundException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.support.DefaultConversionService;
-import org.springframework.tests.Assume;
-import org.springframework.tests.TestGroup;
+import org.springframework.lang.Nullable;
 import org.springframework.util.ClassUtils;
-import org.springframework.util.StopWatch;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.entry;
 
 /**
- * Unit tests for {@link DefaultConversionService}.
+ * Tests for {@link DefaultConversionService}.
  *
  * <p>In this package for enforcing accessibility checks to non-public classes outside
- * of the {@code org.springframework.core.convert.support} implementation package.
+ * the {@code org.springframework.core.convert.support} implementation package.
  * Only in such a scenario, {@code setAccessible(true)} is actually necessary.
  *
  * @author Keith Donald
@@ -71,250 +69,250 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  * @author Stephane Nicoll
  * @author Sam Brannen
  */
-public class DefaultConversionServiceTests {
+class DefaultConversionServiceTests {
 
 	private final DefaultConversionService conversionService = new DefaultConversionService();
 
 
 	@Test
-	public void testStringToCharacter() {
+	void stringToCharacter() {
 		assertThat(conversionService.convert("1", Character.class)).isEqualTo(Character.valueOf('1'));
 	}
 
 	@Test
-	public void testStringToCharacterEmptyString() {
-		assertThat(conversionService.convert("", Character.class)).isEqualTo(null);
+	void stringToCharacterEmptyString() {
+		assertThat(conversionService.convert("", Character.class)).isNull();
 	}
 
 	@Test
-	public void testStringToCharacterInvalidString() {
+	void stringToCharacterInvalidString() {
 		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
 				conversionService.convert("invalid", Character.class));
 	}
 
 	@Test
-	public void testCharacterToString() {
+	void characterToString() {
 		assertThat(conversionService.convert('3', String.class)).isEqualTo("3");
 	}
 
 	@Test
-	public void testStringToBooleanTrue() {
-		assertThat(conversionService.convert("true", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("on", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("yes", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("1", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("TRUE", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("ON", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("YES", Boolean.class)).isEqualTo(true);
+	void stringToBooleanTrue() {
+		assertThat(conversionService.convert("true", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("on", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("yes", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("1", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("TRUE", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("ON", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("YES", Boolean.class)).isTrue();
 	}
 
 	@Test
-	public void testStringToBooleanFalse() {
-		assertThat(conversionService.convert("false", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("off", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("no", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("0", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("FALSE", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("OFF", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("NO", Boolean.class)).isEqualTo(false);
+	void stringToBooleanFalse() {
+		assertThat(conversionService.convert("false", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("off", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("no", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("0", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("FALSE", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("OFF", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("NO", Boolean.class)).isFalse();
 	}
 
 	@Test
-	public void testStringToBooleanEmptyString() {
-		assertThat(conversionService.convert("", Boolean.class)).isEqualTo(null);
+	void stringToBooleanEmptyString() {
+		assertThat(conversionService.convert("", Boolean.class)).isNull();
 	}
 
 	@Test
-	public void testStringToBooleanInvalidString() {
+	void stringToBooleanInvalidString() {
 		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
 				conversionService.convert("invalid", Boolean.class));
 	}
 
 	@Test
-	public void testBooleanToString() {
+	void booleanToString() {
 		assertThat(conversionService.convert(true, String.class)).isEqualTo("true");
 	}
 
 	@Test
-	public void testStringToByte() {
+	void stringToByte() {
 		assertThat(conversionService.convert("1", Byte.class)).isEqualTo((byte) 1);
 	}
 
 	@Test
-	public void testByteToString() {
+	void byteToString() {
 		assertThat(conversionService.convert("A".getBytes()[0], String.class)).isEqualTo("65");
 	}
 
 	@Test
-	public void testStringToShort() {
+	void stringToShort() {
 		assertThat(conversionService.convert("1", Short.class)).isEqualTo((short) 1);
 	}
 
 	@Test
-	public void testShortToString() {
+	void shortToString() {
 		short three = 3;
 		assertThat(conversionService.convert(three, String.class)).isEqualTo("3");
 	}
 
 	@Test
-	public void testStringToInteger() {
-		assertThat(conversionService.convert("1", Integer.class)).isEqualTo((int) Integer.valueOf(1));
+	void stringToInteger() {
+		assertThat(conversionService.convert("1", Integer.class)).isEqualTo(1);
 	}
 
 	@Test
-	public void testIntegerToString() {
+	void integerToString() {
 		assertThat(conversionService.convert(3, String.class)).isEqualTo("3");
 	}
 
 	@Test
-	public void testStringToLong() {
+	void stringToLong() {
 		assertThat(conversionService.convert("1", Long.class)).isEqualTo(Long.valueOf(1));
 	}
 
 	@Test
-	public void testLongToString() {
+	void longToString() {
 		assertThat(conversionService.convert(3L, String.class)).isEqualTo("3");
 	}
 
 	@Test
-	public void testStringToFloat() {
+	void stringToFloat() {
 		assertThat(conversionService.convert("1.0", Float.class)).isEqualTo(Float.valueOf("1.0"));
 	}
 
 	@Test
-	public void testFloatToString() {
+	void floatToString() {
 		assertThat(conversionService.convert(Float.valueOf("1.0"), String.class)).isEqualTo("1.0");
 	}
 
 	@Test
-	public void testStringToDouble() {
+	void stringToDouble() {
 		assertThat(conversionService.convert("1.0", Double.class)).isEqualTo(Double.valueOf("1.0"));
 	}
 
 	@Test
-	public void testDoubleToString() {
+	void doubleToString() {
 		assertThat(conversionService.convert(Double.valueOf("1.0"), String.class)).isEqualTo("1.0");
 	}
 
 	@Test
-	public void testStringToBigInteger() {
+	void stringToBigInteger() {
 		assertThat(conversionService.convert("1", BigInteger.class)).isEqualTo(new BigInteger("1"));
 	}
 
 	@Test
-	public void testBigIntegerToString() {
+	void bigIntegerToString() {
 		assertThat(conversionService.convert(new BigInteger("100"), String.class)).isEqualTo("100");
 	}
 
 	@Test
-	public void testStringToBigDecimal() {
+	void stringToBigDecimal() {
 		assertThat(conversionService.convert("1.0", BigDecimal.class)).isEqualTo(new BigDecimal("1.0"));
 	}
 
 	@Test
-	public void testBigDecimalToString() {
+	void bigDecimalToString() {
 		assertThat(conversionService.convert(new BigDecimal("100.00"), String.class)).isEqualTo("100.00");
 	}
 
 	@Test
-	public void testStringToNumber() {
+	void stringToNumber() {
 		assertThat(conversionService.convert("1.0", Number.class)).isEqualTo(new BigDecimal("1.0"));
 	}
 
 	@Test
-	public void testStringToNumberEmptyString() {
-		assertThat(conversionService.convert("", Number.class)).isEqualTo(null);
+	void stringToNumberEmptyString() {
+		assertThat(conversionService.convert("", Number.class)).isNull();
 	}
 
 	@Test
-	public void testStringToEnum() {
+	void stringToEnum() {
 		assertThat(conversionService.convert("BAR", Foo.class)).isEqualTo(Foo.BAR);
 	}
 
 	@Test
-	public void testStringToEnumWithSubclass() {
+	void stringToEnumWithSubclass() {
 		assertThat(conversionService.convert("BAZ", SubFoo.BAR.getClass())).isEqualTo(SubFoo.BAZ);
 	}
 
 	@Test
-	public void testStringToEnumEmptyString() {
-		assertThat(conversionService.convert("", Foo.class)).isEqualTo(null);
+	void stringToEnumEmptyString() {
+		assertThat(conversionService.convert("", Foo.class)).isNull();
 	}
 
 	@Test
-	public void testEnumToString() {
+	void enumToString() {
 		assertThat(conversionService.convert(Foo.BAR, String.class)).isEqualTo("BAR");
 	}
 
 	@Test
-	public void testIntegerToEnum() {
+	void integerToEnum() {
 		assertThat(conversionService.convert(0, Foo.class)).isEqualTo(Foo.BAR);
 	}
 
 	@Test
-	public void testIntegerToEnumWithSubclass() {
+	void integerToEnumWithSubclass() {
 		assertThat(conversionService.convert(1, SubFoo.BAR.getClass())).isEqualTo(SubFoo.BAZ);
 	}
 
 	@Test
-	public void testIntegerToEnumNull() {
-		assertThat(conversionService.convert(null, Foo.class)).isEqualTo(null);
+	void integerToEnumNull() {
+		assertThat(conversionService.convert(null, Foo.class)).isNull();
 	}
 
 	@Test
-	public void testEnumToInteger() {
-		assertThat(conversionService.convert(Foo.BAR, Integer.class)).isEqualTo((int) Integer.valueOf(0));
+	void enumToInteger() {
+		assertThat(conversionService.convert(Foo.BAR, Integer.class)).isEqualTo(0);
 	}
 
 	@Test
-	public void testStringToEnumSet() throws Exception {
+	void stringToEnumSet() throws Exception {
 		assertThat(conversionService.convert("BAR", TypeDescriptor.valueOf(String.class),
 				new TypeDescriptor(getClass().getField("enumSet")))).isEqualTo(EnumSet.of(Foo.BAR));
 	}
 
 	@Test
-	public void testStringToLocale() {
+	void stringToLocale() {
 		assertThat(conversionService.convert("en", Locale.class)).isEqualTo(Locale.ENGLISH);
 	}
 
 	@Test
-	public void testStringToLocaleWithCountry() {
+	void stringToLocaleWithCountry() {
 		assertThat(conversionService.convert("en_US", Locale.class)).isEqualTo(Locale.US);
 	}
 
 	@Test
-	public void testStringToLocaleWithLanguageTag() {
+	void stringToLocaleWithLanguageTag() {
 		assertThat(conversionService.convert("en-US", Locale.class)).isEqualTo(Locale.US);
 	}
 
 	@Test
-	public void testStringToCharset() {
+	void stringToCharset() {
 		assertThat(conversionService.convert("UTF-8", Charset.class)).isEqualTo(StandardCharsets.UTF_8);
 	}
 
 	@Test
-	public void testCharsetToString() {
+	void charsetToString() {
 		assertThat(conversionService.convert(StandardCharsets.UTF_8, String.class)).isEqualTo("UTF-8");
 	}
 
 	@Test
-	public void testStringToCurrency() {
+	void stringToCurrency() {
 		assertThat(conversionService.convert("EUR", Currency.class)).isEqualTo(Currency.getInstance("EUR"));
 	}
 
 	@Test
-	public void testCurrencyToString() {
+	void currencyToString() {
 		assertThat(conversionService.convert(Currency.getInstance("USD"), String.class)).isEqualTo("USD");
 	}
 
 	@Test
-	public void testStringToString() {
+	void stringToString() {
 		String str = "test";
 		assertThat(conversionService.convert(str, String.class)).isSameAs(str);
 	}
 
 	@Test
-	public void testUuidToStringAndStringToUuid() {
+	void uuidToStringAndStringToUuid() {
 		UUID uuid = UUID.randomUUID();
 		String convertToString = conversionService.convert(uuid, String.class);
 		UUID convertToUUID = conversionService.convert(convertToString, UUID.class);
@@ -322,415 +320,432 @@ public class DefaultConversionServiceTests {
 	}
 
 	@Test
-	public void testNumberToNumber() {
+	void stringToPatternEmptyString() {
+		assertThat(conversionService.convert("", Pattern.class)).isNull();
+	}
+
+	@Test
+	void stringToPattern() {
+		String pattern = "\\s";
+		assertThat(conversionService.convert(pattern, Pattern.class))
+				.isInstanceOfSatisfying(Pattern.class, regex -> assertThat(regex.pattern()).isEqualTo(pattern));
+	}
+
+	@Test
+	void patternToString() {
+		String regex = "\\d";
+		assertThat(conversionService.convert(Pattern.compile(regex), String.class)).isEqualTo(regex);
+	}
+
+	@Test
+	void numberToNumber() {
 		assertThat(conversionService.convert(1, Long.class)).isEqualTo(Long.valueOf(1));
 	}
 
 	@Test
-	public void testNumberToNumberNotSupportedNumber() {
-		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
-				conversionService.convert(1, CustomNumber.class));
+	void numberToNumberNotSupportedNumber() {
+		assertThatExceptionOfType(ConversionFailedException.class)
+				.isThrownBy(() -> conversionService.convert(1, CustomNumber.class));
 	}
 
 	@Test
-	public void testNumberToCharacter() {
+	void numberToCharacter() {
 		assertThat(conversionService.convert(65, Character.class)).isEqualTo(Character.valueOf('A'));
 	}
 
 	@Test
-	public void testCharacterToNumber() {
+	void characterToNumber() {
 		assertThat(conversionService.convert('A', Integer.class)).isEqualTo(65);
 	}
 
 	// collection conversion
 
 	@Test
-	public void convertArrayToCollectionInterface() {
-		List<?> result = conversionService.convert(new String[] {"1", "2", "3"}, List.class);
-		assertThat(result.get(0)).isEqualTo("1");
-		assertThat(result.get(1)).isEqualTo("2");
-		assertThat(result.get(2)).isEqualTo("3");
-	}
-
-	@Test
-	public void convertArrayToCollectionGenericTypeConversion() throws Exception {
+	void convertArrayToCollectionInterface() {
 		@SuppressWarnings("unchecked")
-		List<Integer> result = (List<Integer>) conversionService.convert(new String[] {"1", "2", "3"}, TypeDescriptor
-				.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericList")));
-		assertThat((int) result.get(0)).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result.get(1)).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result.get(2)).isEqualTo((int) Integer.valueOf(3));
+		Collection<String> result = conversionService.convert(new String[] {"1", "2", "3"}, Collection.class);
+		assertThat(result).isEqualTo(List.of("1", "2", "3"));
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
 	}
 
 	@Test
-	public void convertArrayToStream() throws Exception {
+	void convertArrayToSetInterface() {
+		@SuppressWarnings("unchecked")
+		Collection<String> result = conversionService.convert(new String[] {"1", "2", "3"}, Set.class);
+		assertThat(result).isExactlyInstanceOf(LinkedHashSet.class).containsExactly("1", "2", "3");
+	}
+
+	@Test
+	void convertArrayToListInterface() {
+		@SuppressWarnings("unchecked")
+		List<String> result = conversionService.convert(new String[] {"1", "2", "3"}, List.class);
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
+	}
+
+	@Test
+	void convertArrayToCollectionGenericTypeConversion() throws Exception {
+		@SuppressWarnings("unchecked")
+		List<Integer> result = (List<Integer>) conversionService.convert(new String[] {"1", "2", "3"},
+				TypeDescriptor.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericList")));
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly(1, 2, 3);
+	}
+
+	@Test
+	void convertArrayToStream() throws Exception {
 		String[] source = {"1", "3", "4"};
 		@SuppressWarnings("unchecked")
 		Stream<Integer> result = (Stream<Integer>) this.conversionService.convert(source,
-				TypeDescriptor.valueOf(String[].class),
-				new TypeDescriptor(getClass().getDeclaredField("genericStream")));
-		assertThat(result.mapToInt(x -> x).sum()).isEqualTo(8);
+				TypeDescriptor.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericStream")));
+		assertThat(result).containsExactly(1, 3, 4);
 	}
 
 	@Test
-	public void testSpr7766() throws Exception {
-		ConverterRegistry registry = (conversionService);
-		registry.addConverter(new ColorConverter());
+	void spr7766() throws Exception {
+		conversionService.addConverter(new ColorConverter());
 		@SuppressWarnings("unchecked")
 		List<Color> colors = (List<Color>) conversionService.convert(new String[] {"ffffff", "#000000"},
 				TypeDescriptor.valueOf(String[].class),
 				new TypeDescriptor(new MethodParameter(getClass().getMethod("handlerMethod", List.class), 0)));
-		assertThat(colors.size()).isEqualTo(2);
-		assertThat(colors.get(0)).isEqualTo(Color.WHITE);
-		assertThat(colors.get(1)).isEqualTo(Color.BLACK);
+		assertThat(colors).containsExactly(Color.WHITE, Color.BLACK);
 	}
 
 	@Test
-	public void convertArrayToCollectionImpl() {
-		LinkedList<?> result = conversionService.convert(new String[] {"1", "2", "3"}, LinkedList.class);
-		assertThat(result.get(0)).isEqualTo("1");
-		assertThat(result.get(1)).isEqualTo("2");
-		assertThat(result.get(2)).isEqualTo("3");
+	void convertArrayToCollectionImpl() {
+		@SuppressWarnings("unchecked")
+		ArrayList<String> result = conversionService.convert(new String[] {"1", "2", "3"}, ArrayList.class);
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
 	}
 
 	@Test
-	public void convertArrayToAbstractCollection() {
-		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
-				conversionService.convert(new String[]{"1", "2", "3"}, AbstractList.class));
+	void convertArrayToAbstractCollection() {
+		assertThatExceptionOfType(ConversionFailedException.class)
+				.isThrownBy(() -> conversionService.convert(new String[]{"1", "2", "3"}, AbstractList.class));
 	}
 
 	@Test
-	public void convertArrayToString() {
+	void convertArrayToString() {
 		String result = conversionService.convert(new String[] {"1", "2", "3"}, String.class);
 		assertThat(result).isEqualTo("1,2,3");
 	}
 
 	@Test
-	public void convertArrayToStringWithElementConversion() {
+	void convertArrayToStringWithElementConversion() {
 		String result = conversionService.convert(new Integer[] {1, 2, 3}, String.class);
 		assertThat(result).isEqualTo("1,2,3");
 	}
 
 	@Test
-	public void convertEmptyArrayToString() {
+	void convertEmptyArrayToString() {
 		String result = conversionService.convert(new String[0], String.class);
-		assertThat(result).isEqualTo("");
+		assertThat(result).isEmpty();
 	}
 
 	@Test
-	public void convertStringToArray() {
+	void convertStringToArray() {
 		String[] result = conversionService.convert("1,2,3", String[].class);
-		assertThat(result.length).isEqualTo(3);
-		assertThat(result[0]).isEqualTo("1");
-		assertThat(result[1]).isEqualTo("2");
-		assertThat(result[2]).isEqualTo("3");
+		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
-	public void convertStringToArrayWithElementConversion() {
+	void convertStringToArrayWithElementConversion() {
 		Integer[] result = conversionService.convert("1,2,3", Integer[].class);
-		assertThat(result.length).isEqualTo(3);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertStringToPrimitiveArrayWithElementConversion() {
+	void convertStringToPrimitiveArrayWithElementConversion() {
 		int[] result = conversionService.convert("1,2,3", int[].class);
-		assertThat(result.length).isEqualTo(3);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertEmptyStringToArray() {
+	void convertEmptyStringToArray() {
 		String[] result = conversionService.convert("", String[].class);
-		assertThat(result.length).isEqualTo(0);
+		assertThat(result).isEmpty();
 	}
 
 	@Test
-	public void convertArrayToObject() {
+	void convertArrayToObject() {
 		Object[] array = new Object[] {3L};
 		Object result = conversionService.convert(array, Long.class);
 		assertThat(result).isEqualTo(3L);
 	}
 
 	@Test
-	public void convertArrayToObjectWithElementConversion() {
+	void convertArrayToObjectWithElementConversion() {
 		String[] array = new String[] {"3"};
 		Integer result = conversionService.convert(array, Integer.class);
-		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).isEqualTo(3);
 	}
 
 	@Test
-	public void convertArrayToObjectAssignableTargetType() {
+	void convertArrayToObjectAssignableTargetType() {
 		Long[] array = new Long[] {3L};
 		Long[] result = (Long[]) conversionService.convert(array, Object.class);
 		assertThat(result).isEqualTo(array);
 	}
 
 	@Test
-	public void convertObjectToArray() {
+	void convertObjectToArray() {
 		Object[] result = conversionService.convert(3L, Object[].class);
-		assertThat(result.length).isEqualTo(1);
-		assertThat(result[0]).isEqualTo(3L);
+		assertThat(result).containsExactly(3L);
 	}
 
 	@Test
-	public void convertObjectToArrayWithElementConversion() {
+	void convertObjectToArrayWithElementConversion() {
 		Integer[] result = conversionService.convert(3L, Integer[].class);
-		assertThat(result.length).isEqualTo(1);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(3);
 	}
 
 	@Test
-	public void convertCollectionToArray() {
-		List<String> list = new ArrayList<>();
-		list.add("1");
-		list.add("2");
-		list.add("3");
+	void convertCollectionToArray() {
+		List<String> list = List.of("1", "2", "3");
 		String[] result = conversionService.convert(list, String[].class);
-		assertThat(result[0]).isEqualTo("1");
-		assertThat(result[1]).isEqualTo("2");
-		assertThat(result[2]).isEqualTo("3");
+		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
-	public void convertCollectionToArrayWithElementConversion() {
-		List<String> list = new ArrayList<>();
-		list.add("1");
-		list.add("2");
-		list.add("3");
+	void convertCollectionToArrayWithElementConversion() {
+		List<String> list = List.of("1", "2", "3");
 		Integer[] result = conversionService.convert(list, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertCollectionToString() {
-		List<String> list = Arrays.asList("foo", "bar");
+	void convertCollectionToString() {
+		List<String> list = List.of("foo", "bar");
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("foo,bar");
 	}
 
 	@Test
-	public void convertCollectionToStringWithElementConversion() throws Exception {
-		List<Integer> list = Arrays.asList(3, 5);
+	void convertCollectionToStringWithElementConversion() throws Exception {
+		List<Integer> list = List.of(3, 5);
 		String result = (String) conversionService.convert(list,
 				new TypeDescriptor(getClass().getField("genericList")), TypeDescriptor.valueOf(String.class));
 		assertThat(result).isEqualTo("3,5");
 	}
 
 	@Test
-	public void convertStringToCollection() {
-		List<?> result = conversionService.convert("1,2,3", List.class);
-		assertThat(result.size()).isEqualTo(3);
-		assertThat(result.get(0)).isEqualTo("1");
-		assertThat(result.get(1)).isEqualTo("2");
-		assertThat(result.get(2)).isEqualTo("3");
+	void convertStringToCollection() {
+		@SuppressWarnings("unchecked")
+		List<String> result = conversionService.convert("1,2,3", List.class);
+		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
-	public void convertStringToCollectionWithElementConversion() throws Exception {
-		List<?> result = (List<?>) conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class),
+	void convertStringToCollectionWithElementConversion() throws Exception {
+		@SuppressWarnings("unchecked")
+		List<Integer> result = (List<Integer>) conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class),
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(result.size()).isEqualTo(3);
-		assertThat(result.get(0)).isEqualTo(1);
-		assertThat(result.get(1)).isEqualTo(2);
-		assertThat(result.get(2)).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertEmptyStringToCollection() {
+	void convertEmptyStringToCollection() {
 		Collection<?> result = conversionService.convert("", Collection.class);
-		assertThat(result.size()).isEqualTo(0);
+		assertThat(result).isEmpty();
 	}
 
 	@Test
-	public void convertCollectionToObject() {
+	void convertCollectionToObject() {
 		List<Long> list = Collections.singletonList(3L);
 		Long result = conversionService.convert(list, Long.class);
-		assertThat(result).isEqualTo(Long.valueOf(3));
+		assertThat(result).isEqualTo(3L);
 	}
 
 	@Test
-	public void convertCollectionToObjectWithElementConversion() {
+	void convertCollectionToObjectWithElementConversion() {
 		List<String> list = Collections.singletonList("3");
 		Integer result = conversionService.convert(list, Integer.class);
-		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).isEqualTo(3);
 	}
 
 	@Test
-	public void convertCollectionToObjectAssignableTarget() throws Exception {
-		Collection<String> source = new ArrayList<>();
-		source.add("foo");
+	void convertCollectionToObjectAssignableTarget() throws Exception {
+		Collection<String> source = List.of("foo");
 		Object result = conversionService.convert(source, new TypeDescriptor(getClass().getField("assignableTarget")));
-		assertThat(result).isEqualTo(source);
+		assertThat(result).isSameAs(source);
 	}
 
 	@Test
-	public void convertCollectionToObjectWithCustomConverter() {
-		List<String> source = new ArrayList<>();
-		source.add("A");
-		source.add("B");
+	void convertCollectionToObjectWithCustomConverter() {
+		List<String> source = List.of("A", "B");
 		conversionService.addConverter(List.class, ListWrapper.class, ListWrapper::new);
 		ListWrapper result = conversionService.convert(source, ListWrapper.class);
 		assertThat(result.getList()).isSameAs(source);
 	}
 
 	@Test
-	public void convertObjectToCollection() {
-		List<?> result = conversionService.convert(3L, List.class);
-		assertThat(result.size()).isEqualTo(1);
-		assertThat(result.get(0)).isEqualTo(3L);
+	void convertObjectToCollection() {
+		@SuppressWarnings("unchecked")
+		List<Long> result = conversionService.convert(3L, List.class);
+		assertThat(result).containsExactly(3L);
 	}
 
 	@Test
-	public void convertObjectToCollectionWithElementConversion() throws Exception {
+	void convertObjectToCollectionWithElementConversion() throws Exception {
 		@SuppressWarnings("unchecked")
 		List<Integer> result = (List<Integer>) conversionService.convert(3L, TypeDescriptor.valueOf(Long.class),
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(result.size()).isEqualTo(1);
-		assertThat((int) result.get(0)).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(3);
 	}
 
 	@Test
-	public void convertStringArrayToIntegerArray() {
+	void convertStringArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new String[] {"1", "2", "3"}, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertStringArrayToIntArray() {
+	void convertStringArrayToIntArray() {
 		int[] result = conversionService.convert(new String[] {"1", "2", "3"}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertIntegerArrayToIntegerArray() {
+	void convertIntArrayToStringArray() {
+		String[] result = conversionService.convert(new int[] {1, 2, 3}, String[].class);
+		assertThat(result).containsExactly("1", "2", "3");
+	}
+
+	@Test
+	void convertIntegerArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new Integer[] {1, 2, 3}, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertIntegerArrayToIntArray() {
+	void convertIntegerArrayToIntArray() {
 		int[] result = conversionService.convert(new Integer[] {1, 2, 3}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertObjectArrayToIntegerArray() {
+	void convertIntArrayToIntegerArray() {
+		Integer[] result = conversionService.convert(new int[] {1, 2}, Integer[].class);
+		assertThat(result).containsExactly(1, 2);
+	}
+
+	@Test
+	void convertObjectArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new Object[] {1, 2, 3}, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertObjectArrayToIntArray() {
+	void convertObjectArrayToIntArray() {
 		int[] result = conversionService.convert(new Object[] {1, 2, 3}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
+	}
+
+	@Test  // gh-33212
+	void convertIntArrayToObjectArray() {
+		Object[] result = conversionService.convert(new int[] {1, 2}, Object[].class);
+		assertThat(result).containsExactly(1, 2);
 	}
 
 	@Test
-	public void convertByteArrayToWrapperArray() {
-		byte[] byteArray = new byte[] {1, 2, 3};
+	void convertIntArrayToFloatArray() {
+		Float[] result = conversionService.convert(new int[] {1, 2}, Float[].class);
+		assertThat(result).containsExactly(1.0F, 2.0F);
+	}
+
+	@Test
+	void convertIntArrayToPrimitiveFloatArray() {
+		float[] result = conversionService.convert(new int[] {1, 2}, float[].class);
+		assertThat(result).containsExactly(1.0F, 2.0F);
+	}
+
+	@Test
+	void convertPrimitiveByteArrayToByteWrapperArray() {
+		byte[] byteArray = {1, 2, 3};
 		Byte[] converted = conversionService.convert(byteArray, Byte[].class);
 		assertThat(converted).isEqualTo(new Byte[]{1, 2, 3});
 	}
 
-	@Test
-	public void convertArrayToArrayAssignable() {
-		int[] result = conversionService.convert(new int[] {1, 2, 3}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+	@Test  // gh-14200, SPR-9566
+	void convertPrimitiveByteArrayToPrimitiveByteArray() {
+		byte[] byteArray = new byte[] {1, 2, 3};
+		byte[] result = conversionService.convert(byteArray, byte[].class);
+		assertThat(result).isSameAs(byteArray);
+		assertThat(result).containsExactly(1, 2, 3);
+	}
+
+	@Test  // gh-14200, SPR-9566
+	void convertIntArrayToIntArray() {
+		int[] intArray = new int[] {1, 2, 3};
+		int[] result = conversionService.convert(intArray, int[].class);
+		assertThat(result).isSameAs(intArray);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertListOfNonStringifiable() {
-		List<Object> list = Arrays.asList(new TestEntity(1L), new TestEntity(2L));
+	void convertListOfNonStringifiable() {
+		List<Object> list = List.of(new TestEntity(1L), new TestEntity(2L));
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		try {
 			conversionService.convert(list, String.class);
 		}
 		catch (ConversionFailedException ex) {
-			assertThat(ex.getMessage().contains(list.getClass().getName())).isTrue();
-			assertThat(ex.getCause() instanceof ConverterNotFoundException).isTrue();
-			assertThat(ex.getCause().getMessage().contains(TestEntity.class.getName())).isTrue();
+			assertThat(ex.getMessage()).contains(list.getClass().getName());
+			assertThat(ex.getCause()).isInstanceOf(ConverterNotFoundException.class);
+			assertThat(ex.getCause().getMessage()).contains(TestEntity.class.getName());
 		}
 	}
 
 	@Test
-	public void convertListOfStringToString() {
-		List<String> list = Arrays.asList("Foo", "Bar");
+	void convertListOfStringToString() {
+		List<String> list = List.of("Foo", "Bar");
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("Foo,Bar");
 	}
 
 	@Test
-	public void convertListOfListToString() {
-		List<String> list1 = Arrays.asList("Foo", "Bar");
-		List<String> list2 = Arrays.asList("Baz", "Boop");
-		List<List<String>> list = Arrays.asList(list1, list2);
+	void convertListOfListToString() {
+		List<String> list1 = List.of("Foo", "Bar");
+		List<String> list2 = List.of("Baz", "Boop");
+		List<List<String>> list = List.of(list1, list2);
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("Foo,Bar,Baz,Boop");
 	}
 
 	@Test
-	public void convertCollectionToCollection() throws Exception {
+	void convertCollectionToCollection() throws Exception {
 		Set<String> foo = new LinkedHashSet<>();
 		foo.add("1");
 		foo.add("2");
 		foo.add("3");
 		@SuppressWarnings("unchecked")
-		List<Integer> bar = (List<Integer>) conversionService.convert(foo, TypeDescriptor.forObject(foo),
+		List<Integer> bar = (List<Integer>) conversionService.convert(foo,
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat((int) bar.get(0)).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) bar.get(1)).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) bar.get(2)).isEqualTo((int) Integer.valueOf(3));
+		assertThat(bar).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void convertCollectionToCollectionNull() throws Exception {
+	void convertCollectionToCollectionNull() throws Exception {
 		@SuppressWarnings("unchecked")
 		List<Integer> bar = (List<Integer>) conversionService.convert(null,
 				TypeDescriptor.valueOf(LinkedHashSet.class), new TypeDescriptor(getClass().getField("genericList")));
-		assertThat((Object) bar).isNull();
+		assertThat(bar).isNull();
 	}
 
 	@Test
-	@SuppressWarnings("rawtypes")
-	public void convertCollectionToCollectionNotGeneric() {
+	@SuppressWarnings({ "rawtypes", "unchecked" })
+	void convertCollectionToCollectionNotGeneric() {
 		Set<String> foo = new LinkedHashSet<>();
 		foo.add("1");
 		foo.add("2");
 		foo.add("3");
-		List bar = (List) conversionService.convert(foo, TypeDescriptor.valueOf(LinkedHashSet.class), TypeDescriptor
-				.valueOf(List.class));
-		assertThat(bar.get(0)).isEqualTo("1");
-		assertThat(bar.get(1)).isEqualTo("2");
-		assertThat(bar.get(2)).isEqualTo("3");
+		List bar = (List) conversionService.convert(foo, TypeDescriptor.valueOf(LinkedHashSet.class), TypeDescriptor.valueOf(List.class));
+		assertThat(bar).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	@SuppressWarnings({"unchecked", "rawtypes"})
-	public void convertCollectionToCollectionSpecialCaseSourceImpl() throws Exception {
+	void convertCollectionToCollectionSpecialCaseSourceImpl() throws Exception {
 		Map map = new LinkedHashMap();
 		map.put("1", "1");
 		map.put("2", "2");
@@ -738,88 +753,79 @@ public class DefaultConversionServiceTests {
 		Collection values = map.values();
 		List<Integer> bar = (List<Integer>) conversionService.convert(values,
 				TypeDescriptor.forObject(values), new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(bar.size()).isEqualTo(3);
-		assertThat((int) bar.get(0)).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) bar.get(1)).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) bar.get(2)).isEqualTo((int) Integer.valueOf(3));
+		assertThat(bar).containsExactly(1, 2, 3);
 	}
 
 	@Test
-	public void collection() {
-		List<String> strings = new ArrayList<>();
-		strings.add("3");
-		strings.add("9");
+	void collection() {
+		List<String> strings = List.of("3", "9");
 		@SuppressWarnings("unchecked")
 		List<Integer> integers = (List<Integer>) conversionService.convert(strings,
 				TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(Integer.class)));
-		assertThat((int) integers.get(0)).isEqualTo((int) Integer.valueOf(3));
-		assertThat((int) integers.get(1)).isEqualTo((int) Integer.valueOf(9));
+		assertThat(integers).containsExactly(3, 9);
 	}
 
 	@Test
-	public void convertMapToMap() throws Exception {
-		Map<String, String> foo = new HashMap<>();
-		foo.put("1", "BAR");
-		foo.put("2", "BAZ");
+	void convertMapToMap() throws Exception {
+		Map<String, String> foo = Map.of("1", "BAR", "2", "BAZ");
 		@SuppressWarnings("unchecked")
 		Map<Integer, Foo> map = (Map<Integer, Foo>) conversionService.convert(foo,
 				TypeDescriptor.forObject(foo), new TypeDescriptor(getClass().getField("genericMap")));
-		assertThat(map.get(1)).isEqualTo(Foo.BAR);
-		assertThat(map.get(2)).isEqualTo(Foo.BAZ);
+		assertThat(map).contains(entry(1, Foo.BAR), entry(2, Foo.BAZ));
 	}
 
 	@Test
-	public void convertHashMapValuesToList() {
+	void convertHashMapValuesToList() {
 		Map<String, Integer> hashMap = new LinkedHashMap<>();
 		hashMap.put("1", 1);
 		hashMap.put("2", 2);
-		List<?> converted = conversionService.convert(hashMap.values(), List.class);
-		assertThat(converted).isEqualTo(Arrays.asList(1, 2));
+		@SuppressWarnings("unchecked")
+		List<Integer> converted = conversionService.convert(hashMap.values(), List.class);
+		assertThat(converted).containsExactly(1, 2);
 	}
 
 	@Test
-	public void map() {
+	void map() {
 		Map<String, String> strings = new HashMap<>();
 		strings.put("3", "9");
 		strings.put("6", "31");
 		@SuppressWarnings("unchecked")
 		Map<Integer, Integer> integers = (Map<Integer, Integer>) conversionService.convert(strings,
 				TypeDescriptor.map(Map.class, TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Integer.class)));
-		assertThat((int) integers.get(3)).isEqualTo((int) Integer.valueOf(9));
-		assertThat((int) integers.get(6)).isEqualTo((int) Integer.valueOf(31));
+		assertThat(integers).contains(entry(3, 9), entry(6, 31));
 	}
 
 	@Test
-	public void convertPropertiesToString() {
+	void convertPropertiesToString() {
 		Properties foo = new Properties();
 		foo.setProperty("1", "BAR");
 		foo.setProperty("2", "BAZ");
 		String result = conversionService.convert(foo, String.class);
-		assertThat(result.contains("1=BAR")).isTrue();
-		assertThat(result.contains("2=BAZ")).isTrue();
+		assertThat(result).contains("1=BAR", "2=BAZ");
 	}
 
 	@Test
-	public void convertStringToProperties() {
-		Properties result = conversionService.convert("a=b\nc=2\nd=", Properties.class);
-		assertThat(result.size()).isEqualTo(3);
-		assertThat(result.getProperty("a")).isEqualTo("b");
-		assertThat(result.getProperty("c")).isEqualTo("2");
-		assertThat(result.getProperty("d")).isEqualTo("");
+	void convertStringToProperties() {
+		Properties result = conversionService.convert("""
+				a=b
+				c=2
+				d=""", Properties.class);
+		assertThat(result).contains(entry("a", "b"), entry("c", "2"), entry("d", ""));
 	}
 
 	@Test
-	public void convertStringToPropertiesWithSpaces() {
-		Properties result = conversionService.convert("   foo=bar\n   bar=baz\n    baz=boop", Properties.class);
-		assertThat(result.get("foo")).isEqualTo("bar");
-		assertThat(result.get("bar")).isEqualTo("baz");
-		assertThat(result.get("baz")).isEqualTo("boop");
+	void convertStringToPropertiesWithLeadingSpaces() {
+		Properties result = conversionService.convert("""
+				\s  foo=bar
+				\s   bar=baz
+				\s    baz=boo""", Properties.class);
+		assertThat(result).contains(entry("foo", "bar"), entry("bar", "baz"), entry("baz", "boo"));
 	}
 
 	// generic object conversion
 
 	@Test
-	public void convertObjectToStringWithValueOfMethodPresentUsingToString() {
+	void convertObjectToStringWithValueOfMethodPresentUsingToString() {
 		ISBN.reset();
 		assertThat(conversionService.convert(new ISBN("123456789"), String.class)).isEqualTo("123456789");
 
@@ -828,8 +834,11 @@ public class DefaultConversionServiceTests {
 		assertThat(ISBN.toStringCount).as("toString() invocations").isEqualTo(1);
 	}
 
+	/**
+	 * @see org.springframework.core.convert.support.ObjectToObjectConverterTests
+	 */
 	@Test
-	public void convertObjectToObjectUsingValueOfMethod() {
+	void convertObjectToObjectUsingValueOfMethod() {
 		ISBN.reset();
 		assertThat(conversionService.convert("123456789", ISBN.class)).isEqualTo(new ISBN("123456789"));
 
@@ -840,7 +849,7 @@ public class DefaultConversionServiceTests {
 	}
 
 	@Test
-	public void convertObjectToStringUsingToString() {
+	void convertObjectToStringUsingToString() {
 		SSN.reset();
 		assertThat(conversionService.convert(new SSN("123456789"), String.class)).isEqualTo("123456789");
 
@@ -849,7 +858,7 @@ public class DefaultConversionServiceTests {
 	}
 
 	@Test
-	public void convertObjectToObjectUsingObjectConstructor() {
+	void convertObjectToObjectUsingObjectConstructor() {
 		SSN.reset();
 		assertThat(conversionService.convert("123456789", SSN.class)).isEqualTo(new SSN("123456789"));
 
@@ -858,128 +867,110 @@ public class DefaultConversionServiceTests {
 	}
 
 	@Test
-	public void convertStringToTimezone() {
+	void convertStringToTimezone() {
 		assertThat(conversionService.convert("GMT+2", TimeZone.class).getID()).isEqualTo("GMT+02:00");
 	}
 
 	@Test
-	public void convertObjectToStringWithJavaTimeOfMethodPresent() {
-		assertThat(conversionService.convert(ZoneId.of("GMT+1"), String.class).startsWith("GMT+")).isTrue();
+	void convertObjectToStringWithJavaTimeOfMethodPresent() {
+		assertThat(conversionService.convert(ZoneId.of("GMT+1"), String.class)).startsWith("GMT+");
 	}
 
 	@Test
-	public void convertObjectToStringNotSupported() {
+	void convertObjectToStringNotSupported() {
 		assertThat(conversionService.canConvert(TestEntity.class, String.class)).isFalse();
 	}
 
 	@Test
-	public void convertObjectToObjectWithJavaTimeOfMethod() {
+	void convertObjectToObjectWithJavaTimeOfMethod() {
 		assertThat(conversionService.convert("GMT+1", ZoneId.class)).isEqualTo(ZoneId.of("GMT+1"));
 	}
 
 	@Test
-	public void convertObjectToObjectNoValueOfMethodOrConstructor() {
-		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
-				conversionService.convert(Long.valueOf(3), SSN.class));
+	void convertObjectToObjectNoValueOfMethodOrConstructor() {
+		assertThatExceptionOfType(ConverterNotFoundException.class)
+				.isThrownBy(() -> conversionService.convert(3L, SSN.class));
 	}
 
 	@Test
-	public void convertObjectToObjectFinderMethod() {
+	void convertObjectToObjectFinderMethod() {
 		TestEntity e = conversionService.convert(1L, TestEntity.class);
 		assertThat(e.getId()).isEqualTo(Long.valueOf(1));
 	}
 
 	@Test
-	public void convertObjectToObjectFinderMethodWithNull() {
+	void convertObjectToObjectFinderMethodWithNull() {
 		TestEntity entity = (TestEntity) conversionService.convert(null,
 				TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(TestEntity.class));
-		assertThat((Object) entity).isNull();
+		assertThat(entity).isNull();
 	}
 
 	@Test
-	public void convertObjectToObjectFinderMethodWithIdConversion() {
+	void convertObjectToObjectFinderMethodWithIdConversion() {
 		TestEntity entity = conversionService.convert("1", TestEntity.class);
 		assertThat(entity.getId()).isEqualTo(Long.valueOf(1));
 	}
 
 	@Test
-	public void convertCharArrayToString() {
+	void convertCharArrayToString() {
 		String converted = conversionService.convert(new char[] {'a', 'b', 'c'}, String.class);
 		assertThat(converted).isEqualTo("a,b,c");
 	}
 
 	@Test
-	public void convertStringToCharArray() {
+	void convertStringToCharArray() {
 		char[] converted = conversionService.convert("a,b,c", char[].class);
-		assertThat(converted).isEqualTo(new char[]{'a', 'b', 'c'});
+		assertThat(converted).containsExactly('a', 'b', 'c');
 	}
 
 	@Test
-	public void convertStringToCustomCharArray() {
+	void convertStringToCustomCharArray() {
 		conversionService.addConverter(String.class, char[].class, String::toCharArray);
 		char[] converted = conversionService.convert("abc", char[].class);
-		assertThat(converted).isEqualTo(new char[] {'a', 'b', 'c'});
+		assertThat(converted).containsExactly('a', 'b', 'c');
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void multidimensionalArrayToListConversionShouldConvertEntriesCorrectly() {
-		String[][] grid = new String[][] {new String[] {"1", "2", "3", "4"}, new String[] {"5", "6", "7", "8"},
-				new String[] {"9", "10", "11", "12"}};
+	void multidimensionalArrayToListConversionShouldConvertEntriesCorrectly() {
+		String[][] grid = new String[][] {{"1", "2", "3", "4"}, {"5", "6", "7", "8"}, {"9", "10", "11", "12"}};
 		List<String[]> converted = conversionService.convert(grid, List.class);
 		String[][] convertedBack = conversionService.convert(converted, String[][].class);
 		assertThat(convertedBack).isEqualTo(grid);
 	}
 
 	@Test
-	public void convertCannotOptimizeArray() {
+	void convertCannotOptimizeArray() {
 		conversionService.addConverter(Byte.class, Byte.class, source -> (byte) (source + 1));
-		byte[] byteArray = new byte[] {1, 2, 3};
+		byte[] byteArray = {1, 2, 3};
 		byte[] converted = conversionService.convert(byteArray, byte[].class);
 		assertThat(converted).isNotSameAs(byteArray);
-		assertThat(converted).isEqualTo(new byte[]{2, 3, 4});
+		assertThat(converted).containsExactly(2, 3, 4);
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void convertObjectToOptional() {
+	void convertObjectToOptional() {
 		Method method = ClassUtils.getMethod(TestEntity.class, "handleOptionalValue", Optional.class);
 		MethodParameter parameter = new MethodParameter(method, 0);
 		TypeDescriptor descriptor = new TypeDescriptor(parameter);
 		Object actual = conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class), descriptor);
 		assertThat(actual.getClass()).isEqualTo(Optional.class);
-		assertThat(((Optional<List<Integer>>) actual).get()).isEqualTo(Arrays.asList(1, 2, 3));
+		assertThat(((Optional<List<Integer>>) actual)).contains(List.of(1, 2, 3));
 	}
 
 	@Test
-	public void convertObjectToOptionalNull() {
+	void convertObjectToOptionalNull() {
 		assertThat(conversionService.convert(null, TypeDescriptor.valueOf(Object.class),
 				TypeDescriptor.valueOf(Optional.class))).isSameAs(Optional.empty());
 		assertThat((Object) conversionService.convert(null, Optional.class)).isSameAs(Optional.empty());
 	}
 
 	@Test
-	public void convertExistingOptional() {
+	void convertExistingOptional() {
 		assertThat(conversionService.convert(Optional.empty(), TypeDescriptor.valueOf(Object.class),
 				TypeDescriptor.valueOf(Optional.class))).isSameAs(Optional.empty());
 		assertThat((Object) conversionService.convert(Optional.empty(), Optional.class)).isSameAs(Optional.empty());
-	}
-
-	@Test
-	public void testPerformance1() {
-		Assume.group(TestGroup.PERFORMANCE);
-		StopWatch watch = new StopWatch("integer->string conversionPerformance");
-		watch.start("convert 4,000,000 with conversion service");
-		for (int i = 0; i < 4000000; i++) {
-			conversionService.convert(3, String.class);
-		}
-		watch.stop();
-		watch.start("convert 4,000,000 manually");
-		for (int i = 0; i < 4000000; i++) {
-			Integer.valueOf(3).toString();
-		}
-		watch.stop();
-		// System.out.println(watch.prettyPrint());
 	}
 
 
@@ -1116,11 +1107,10 @@ public class DefaultConversionServiceTests {
 		}
 
 		@Override
-		public boolean equals(Object o) {
-			if (!(o instanceof SSN)) {
+		public boolean equals(@Nullable Object o) {
+			if (!(o instanceof SSN ssn)) {
 				return false;
 			}
-			SSN ssn = (SSN) o;
 			return this.value.equals(ssn.value);
 		}
 
@@ -1157,11 +1147,10 @@ public class DefaultConversionServiceTests {
 		}
 
 		@Override
-		public boolean equals(Object o) {
-			if (!(o instanceof ISBN)) {
+		public boolean equals(@Nullable Object o) {
+			if (!(o instanceof ISBN isbn)) {
 				return false;
 			}
-			ISBN isbn = (ISBN) o;
 			return this.value.equals(isbn.value);
 		}
 
