@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,33 +16,32 @@
 
 package org.springframework.test.context.cache;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.test.context.MergedContextConfiguration;
-import org.springframework.test.util.ReflectionTestUtils;
 
-import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.as;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.InstanceOfAssertFactories.map;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 /**
- * Unit tests for the LRU eviction policy in {@link DefaultContextCache}.
+ * Tests for the LRU eviction policy in {@link DefaultContextCache}.
  *
  * @author Sam Brannen
  * @since 4.3
  * @see ContextCacheTests
  */
-public class LruContextCacheTests {
+class LruContextCacheTests {
 
 	private static final MergedContextConfiguration abcConfig = config(Abc.class);
 	private static final MergedContextConfiguration fooConfig = config(Foo.class);
@@ -50,26 +49,24 @@ public class LruContextCacheTests {
 	private static final MergedContextConfiguration bazConfig = config(Baz.class);
 
 
-	private final ConfigurableApplicationContext abcContext = mock(ConfigurableApplicationContext.class);
-	private final ConfigurableApplicationContext fooContext = mock(ConfigurableApplicationContext.class);
-	private final ConfigurableApplicationContext barContext = mock(ConfigurableApplicationContext.class);
-	private final ConfigurableApplicationContext bazContext = mock(ConfigurableApplicationContext.class);
+	private final ConfigurableApplicationContext abcContext = mock();
+	private final ConfigurableApplicationContext fooContext = mock();
+	private final ConfigurableApplicationContext barContext = mock();
+	private final ConfigurableApplicationContext bazContext = mock();
 
 
 	@Test
-	public void maxCacheSizeNegativeOne() {
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				new DefaultContextCache(-1));
+	void maxCacheSizeNegativeOne() {
+		assertThatIllegalArgumentException().isThrownBy(() -> new DefaultContextCache(-1));
 	}
 
 	@Test
-	public void maxCacheSizeZero() {
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				new DefaultContextCache(0));
+	void maxCacheSizeZero() {
+		assertThatIllegalArgumentException().isThrownBy(() -> new DefaultContextCache(0));
 	}
 
 	@Test
-	public void maxCacheSizeOne() {
+	void maxCacheSizeOne() {
 		DefaultContextCache cache = new DefaultContextCache(1);
 		assertThat(cache.size()).isEqualTo(0);
 		assertThat(cache.getMaxSize()).isEqualTo(1);
@@ -88,7 +85,7 @@ public class LruContextCacheTests {
 	}
 
 	@Test
-	public void maxCacheSizeThree() {
+	void maxCacheSizeThree() {
 		DefaultContextCache cache = new DefaultContextCache(3);
 		assertThat(cache.size()).isEqualTo(0);
 		assertThat(cache.getMaxSize()).isEqualTo(3);
@@ -110,7 +107,7 @@ public class LruContextCacheTests {
 	}
 
 	@Test
-	public void ensureLruOrderingIsUpdated() {
+	void ensureLruOrderingIsUpdated() {
 		DefaultContextCache cache = new DefaultContextCache(3);
 
 		// Note: when a new entry is added it is considered the MRU entry and inserted at the tail.
@@ -134,7 +131,7 @@ public class LruContextCacheTests {
 	}
 
 	@Test
-	public void ensureEvictedContextsAreClosed() {
+	void ensureEvictedContextsAreClosed() {
 		DefaultContextCache cache = new DefaultContextCache(2);
 
 		cache.put(fooConfig, fooContext);
@@ -158,20 +155,16 @@ public class LruContextCacheTests {
 		return new MergedContextConfiguration(null, null, new Class<?>[] { clazz }, null, null);
 	}
 
-	@SuppressWarnings("unchecked")
 	private static void assertCacheContents(DefaultContextCache cache, String... expectedNames) {
-
-		Map<MergedContextConfiguration, ApplicationContext> contextMap =
-				(Map<MergedContextConfiguration, ApplicationContext>) ReflectionTestUtils.getField(cache, "contextMap");
-
-		// @formatter:off
-		List<String> actualNames = contextMap.keySet().stream()
-			.map(cfg -> cfg.getClasses()[0])
-			.map(Class::getSimpleName)
-			.collect(toList());
-		// @formatter:on
-
-		assertThat(actualNames).isEqualTo(asList(expectedNames));
+		assertThat(cache).extracting("contextMap", as(map(MergedContextConfiguration.class, ApplicationContext.class)))
+				.satisfies(contextMap -> {
+					List<String> actualNames = contextMap.keySet().stream()
+							.map(MergedContextConfiguration::getClasses)
+							.flatMap(Arrays::stream)
+							.map(Class::getSimpleName)
+							.toList();
+					assertThat(actualNames).containsExactly(expectedNames);
+				});
 	}
 
 
