@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.http;
 
 import java.net.InetSocketAddress;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
@@ -28,19 +27,25 @@ import java.util.Arrays;
 import java.util.Base64;
 import java.util.Calendar;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.GregorianCalendar;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map.Entry;
+import java.util.Set;
 import java.util.TimeZone;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.entry;
 
 /**
- * Unit tests for {@link org.springframework.http.HttpHeaders}.
+ * Tests for {@link org.springframework.http.HttpHeaders}.
  *
  * @author Arjen Poutsma
  * @author Sebastien Deleuze
@@ -48,13 +53,24 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Juergen Hoeller
  * @author Sam Brannen
  */
-public class HttpHeadersTests {
+class HttpHeadersTests {
 
-	private final HttpHeaders headers = new HttpHeaders();
-
+	final HttpHeaders headers = new HttpHeaders();
 
 	@Test
-	public void getOrEmpty() {
+	void constructorUnwrapsReadonly() {
+		headers.setContentType(MediaType.APPLICATION_JSON);
+		HttpHeaders readOnly = HttpHeaders.readOnlyHttpHeaders(headers);
+		assertThat(readOnly.getContentType()).isEqualTo(MediaType.APPLICATION_JSON);
+		HttpHeaders writable = new HttpHeaders(readOnly);
+		writable.setContentType(MediaType.TEXT_PLAIN);
+		// content-type value is cached by ReadOnlyHttpHeaders
+		assertThat(readOnly.getContentType()).isEqualTo(MediaType.APPLICATION_JSON);
+		assertThat(writable.getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+	}
+
+	@Test
+	void getOrEmpty() {
 		String key = "FOO";
 
 		assertThat(headers.get(key)).isNull();
@@ -69,14 +85,14 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void getFirst() {
+	void getFirst() {
 		headers.add(HttpHeaders.CACHE_CONTROL, "max-age=1000, public");
 		headers.add(HttpHeaders.CACHE_CONTROL, "s-maxage=1000");
 		assertThat(headers.getFirst(HttpHeaders.CACHE_CONTROL)).isEqualTo("max-age=1000, public");
 	}
 
 	@Test
-	public void accept() {
+	void accept() {
 		MediaType mediaType1 = new MediaType("text", "html");
 		MediaType mediaType2 = new MediaType("text", "plain");
 		List<MediaType> mediaTypes = new ArrayList<>(2);
@@ -88,7 +104,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test  // SPR-9655
-	public void acceptWithMultipleHeaderValues() {
+	void acceptWithMultipleHeaderValues() {
 		headers.add("Accept", "text/html");
 		headers.add("Accept", "text/plain");
 		List<MediaType> expected = Arrays.asList(new MediaType("text", "html"), new MediaType("text", "plain"));
@@ -96,7 +112,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test  // SPR-14506
-	public void acceptWithMultipleCommaSeparatedHeaderValues() {
+	void acceptWithMultipleCommaSeparatedHeaderValues() {
 		headers.add("Accept", "text/html,text/pdf");
 		headers.add("Accept", "text/plain,text/csv");
 		List<MediaType> expected = Arrays.asList(new MediaType("text", "html"), new MediaType("text", "pdf"),
@@ -105,7 +121,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void acceptCharsets() {
+	void acceptCharsets() {
 		Charset charset1 = StandardCharsets.UTF_8;
 		Charset charset2 = StandardCharsets.ISO_8859_1;
 		List<Charset> charsets = new ArrayList<>(2);
@@ -117,21 +133,21 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void acceptCharsetWildcard() {
+	void acceptCharsetWildcard() {
 		headers.set("Accept-Charset", "ISO-8859-1,utf-8;q=0.7,*;q=0.7");
 		assertThat(headers.getAcceptCharset()).as("Invalid Accept header").isEqualTo(Arrays.asList(StandardCharsets.ISO_8859_1, StandardCharsets.UTF_8));
 	}
 
 	@Test
-	public void allow() {
-		EnumSet<HttpMethod> methods = EnumSet.of(HttpMethod.GET, HttpMethod.POST);
+	void allow() {
+		Set<HttpMethod> methods = new LinkedHashSet<>(Arrays.asList(HttpMethod.GET, HttpMethod.POST));
 		headers.setAllow(methods);
 		assertThat(headers.getAllow()).as("Invalid Allow header").isEqualTo(methods);
 		assertThat(headers.getFirst("Allow")).as("Invalid Allow header").isEqualTo("GET,POST");
 	}
 
 	@Test
-	public void contentLength() {
+	void contentLength() {
 		long length = 42L;
 		headers.setContentLength(length);
 		assertThat(headers.getContentLength()).as("Invalid Content-Length header").isEqualTo(length);
@@ -139,7 +155,18 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void contentType() {
+	void setContentLengthWithNegativeValue() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				headers.setContentLength(-1));
+	}
+
+	@Test
+	void getContentLengthReturnsMinusOneForAbsentHeader() {
+		assertThat(headers.getContentLength()).isEqualTo(-1);
+	}
+
+	@Test
+	void contentType() {
 		MediaType contentType = new MediaType("text", "html", StandardCharsets.UTF_8);
 		headers.setContentType(contentType);
 		assertThat(headers.getContentType()).as("Invalid Content-Type header").isEqualTo(contentType);
@@ -147,15 +174,15 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void location() throws URISyntaxException {
-		URI location = new URI("https://www.example.com/hotels");
+	void location() {
+		URI location = URI.create("https://www.example.com/hotels");
 		headers.setLocation(location);
 		assertThat(headers.getLocation()).as("Invalid Location header").isEqualTo(location);
 		assertThat(headers.getFirst("Location")).as("Invalid Location header").isEqualTo("https://www.example.com/hotels");
 	}
 
 	@Test
-	public void eTag() {
+	void eTag() {
 		String eTag = "\"v2.6\"";
 		headers.setETag(eTag);
 		assertThat(headers.getETag()).as("Invalid ETag header").isEqualTo(eTag);
@@ -163,7 +190,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void host() {
+	void host() {
 		InetSocketAddress host = InetSocketAddress.createUnresolved("localhost", 8080);
 		headers.setHost(host);
 		assertThat(headers.getHost()).as("Invalid Host header").isEqualTo(host);
@@ -171,7 +198,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void hostNoPort() {
+	void hostNoPort() {
 		InetSocketAddress host = InetSocketAddress.createUnresolved("localhost", 0);
 		headers.setHost(host);
 		assertThat(headers.getHost()).as("Invalid Host header").isEqualTo(host);
@@ -179,7 +206,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void ipv6Host() {
+	void ipv6Host() {
 		InetSocketAddress host = InetSocketAddress.createUnresolved("[::1]", 0);
 		headers.setHost(host);
 		assertThat(headers.getHost()).as("Invalid Host header").isEqualTo(host);
@@ -187,52 +214,57 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void illegalETag() {
+	void illegalETagWithoutQuotes() {
 		String eTag = "v2.6";
 		assertThatIllegalArgumentException().isThrownBy(() -> headers.setETag(eTag));
 	}
 
 	@Test
-	public void ifMatch() {
+	void illegalWeakETagWithoutLeadingQuote() {
+		String etag = "W/v2.6\"";
+		assertThatIllegalArgumentException().isThrownBy(() -> headers.setETag(etag));
+	}
+
+	@Test
+	void ifMatch() {
 		String ifMatch = "\"v2.6\"";
 		headers.setIfMatch(ifMatch);
-		assertThat(headers.getIfMatch().get(0)).as("Invalid If-Match header").isEqualTo(ifMatch);
+		assertThat(headers.getIfMatch()).containsExactly(ifMatch);
 		assertThat(headers.getFirst("If-Match")).as("Invalid If-Match header").isEqualTo("\"v2.6\"");
 	}
 
 	@Test
-	public void ifMatchIllegalHeader() {
+	void ifMatchIllegalHeader() {
 		headers.setIfMatch("Illegal");
 		assertThatIllegalArgumentException().isThrownBy(headers::getIfMatch);
 	}
 
 	@Test
-	public void ifMatchMultipleHeaders() {
+	void ifMatchMultipleHeaders() {
 		headers.add(HttpHeaders.IF_MATCH, "\"v2,0\"");
 		headers.add(HttpHeaders.IF_MATCH, "W/\"v2,1\", \"v2,2\"");
-		assertThat(headers.get(HttpHeaders.IF_MATCH).get(0)).as("Invalid If-Match header").isEqualTo("\"v2,0\"");
-		assertThat(headers.get(HttpHeaders.IF_MATCH).get(1)).as("Invalid If-Match header").isEqualTo("W/\"v2,1\", \"v2,2\"");
+		assertThat(headers.get(HttpHeaders.IF_MATCH)).containsExactly("\"v2,0\"", "W/\"v2,1\", \"v2,2\"");
 		assertThat(headers.getIfMatch()).contains("\"v2,0\"", "W/\"v2,1\"", "\"v2,2\"");
 	}
 
 	@Test
-	public void ifNoneMatch() {
+	void ifNoneMatch() {
 		String ifNoneMatch = "\"v2.6\"";
 		headers.setIfNoneMatch(ifNoneMatch);
-		assertThat(headers.getIfNoneMatch().get(0)).as("Invalid If-None-Match header").isEqualTo(ifNoneMatch);
+		assertThat(headers.getIfNoneMatch()).containsExactly(ifNoneMatch);
 		assertThat(headers.getFirst("If-None-Match")).as("Invalid If-None-Match header").isEqualTo("\"v2.6\"");
 	}
 
 	@Test
-	public void ifNoneMatchWildCard() {
+	void ifNoneMatchWildCard() {
 		String ifNoneMatch = "*";
 		headers.setIfNoneMatch(ifNoneMatch);
-		assertThat(headers.getIfNoneMatch().get(0)).as("Invalid If-None-Match header").isEqualTo(ifNoneMatch);
+		assertThat(headers.getIfNoneMatch()).containsExactly(ifNoneMatch);
 		assertThat(headers.getFirst("If-None-Match")).as("Invalid If-None-Match header").isEqualTo("*");
 	}
 
 	@Test
-	public void ifNoneMatchList() {
+	void ifNoneMatchList() {
 		String ifNoneMatch1 = "\"v2.6\"";
 		String ifNoneMatch2 = "\"v2.7\", \"v2.8\"";
 		List<String> ifNoneMatchList = new ArrayList<>(2);
@@ -244,7 +276,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void date() {
+	void date() {
 		Calendar calendar = new GregorianCalendar(2008, 11, 18, 11, 20);
 		calendar.setTimeZone(TimeZone.getTimeZone("CET"));
 		long date = calendar.getTimeInMillis();
@@ -258,13 +290,13 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void dateInvalid() {
+	void dateInvalid() {
 		headers.set("Date", "Foo Bar Baz");
 		assertThatIllegalArgumentException().isThrownBy(headers::getDate);
 	}
 
 	@Test
-	public void dateOtherLocale() {
+	void dateOtherLocale() {
 		Locale defaultLocale = Locale.getDefault();
 		try {
 			Locale.setDefault(new Locale("nl", "nl"));
@@ -281,7 +313,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void lastModified() {
+	void lastModified() {
 		Calendar calendar = new GregorianCalendar(2008, 11, 18, 11, 20);
 		calendar.setTimeZone(TimeZone.getTimeZone("CET"));
 		long date = calendar.getTimeInMillis();
@@ -291,7 +323,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void expiresLong() {
+	void expiresLong() {
 		Calendar calendar = new GregorianCalendar(2008, 11, 18, 11, 20);
 		calendar.setTimeZone(TimeZone.getTimeZone("CET"));
 		long date = calendar.getTimeInMillis();
@@ -301,7 +333,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void expiresZonedDateTime() {
+	void expiresZonedDateTime() {
 		ZonedDateTime zonedDateTime = ZonedDateTime.of(2008, 12, 18, 10, 20, 0, 0, ZoneId.of("GMT"));
 		headers.setExpires(zonedDateTime);
 		assertThat(headers.getExpires()).as("Invalid Expires header").isEqualTo(zonedDateTime.toInstant().toEpochMilli());
@@ -309,13 +341,13 @@ public class HttpHeadersTests {
 	}
 
 	@Test  // SPR-10648 (example is from INT-3063)
-	public void expiresInvalidDate() {
+	void expiresInvalidDate() {
 		headers.set("Expires", "-1");
 		assertThat(headers.getExpires()).isEqualTo(-1);
 	}
 
 	@Test
-	public void ifModifiedSince() {
+	void ifModifiedSince() {
 		Calendar calendar = new GregorianCalendar(2008, 11, 18, 11, 20);
 		calendar.setTimeZone(TimeZone.getTimeZone("CET"));
 		long date = calendar.getTimeInMillis();
@@ -325,7 +357,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test  // SPR-14144
-	public void invalidIfModifiedSinceHeader() {
+	void invalidIfModifiedSinceHeader() {
 		headers.set(HttpHeaders.IF_MODIFIED_SINCE, "0");
 		assertThat(headers.getIfModifiedSince()).isEqualTo(-1);
 
@@ -337,7 +369,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void pragma() {
+	void pragma() {
 		String pragma = "no-cache";
 		headers.setPragma(pragma);
 		assertThat(headers.getPragma()).as("Invalid Pragma header").isEqualTo(pragma);
@@ -345,52 +377,53 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void cacheControl() {
+	void cacheControl() {
 		headers.setCacheControl("no-cache");
 		assertThat(headers.getCacheControl()).as("Invalid Cache-Control header").isEqualTo("no-cache");
 		assertThat(headers.getFirst("cache-control")).as("Invalid Cache-Control header").isEqualTo("no-cache");
 	}
 
 	@Test
-	public void cacheControlBuilder() {
+	void cacheControlBuilder() {
 		headers.setCacheControl(CacheControl.noCache());
 		assertThat(headers.getCacheControl()).as("Invalid Cache-Control header").isEqualTo("no-cache");
 		assertThat(headers.getFirst("cache-control")).as("Invalid Cache-Control header").isEqualTo("no-cache");
 	}
 
 	@Test
-	public void cacheControlEmpty() {
+	void cacheControlEmpty() {
 		headers.setCacheControl(CacheControl.empty());
 		assertThat(headers.getCacheControl()).as("Invalid Cache-Control header").isNull();
 		assertThat(headers.getFirst("cache-control")).as("Invalid Cache-Control header").isNull();
 	}
 
 	@Test
-	public void cacheControlAllValues() {
+	void cacheControlAllValues() {
 		headers.add(HttpHeaders.CACHE_CONTROL, "max-age=1000, public");
 		headers.add(HttpHeaders.CACHE_CONTROL, "s-maxage=1000");
 		assertThat(headers.getCacheControl()).isEqualTo("max-age=1000, public, s-maxage=1000");
 	}
 
 	@Test
-	public void contentDisposition() {
+	@SuppressWarnings("deprecation")
+	void contentDisposition() {
 		ContentDisposition disposition = headers.getContentDisposition();
 		assertThat(disposition).isNotNull();
 		assertThat(headers.getContentDisposition()).as("Invalid Content-Disposition header").isEqualTo(ContentDisposition.empty());
 
-		disposition = ContentDisposition.builder("attachment").name("foo").filename("foo.txt").size(123L).build();
+		disposition = ContentDisposition.attachment().name("foo").filename("foo.txt").size(123L).build();
 		headers.setContentDisposition(disposition);
 		assertThat(headers.getContentDisposition()).as("Invalid Content-Disposition header").isEqualTo(disposition);
 	}
 
 	@Test  // SPR-11917
-	public void getAllowEmptySet() {
+	void getAllowEmptySet() {
 		headers.setAllow(Collections.emptySet());
 		assertThat(headers.getAllow()).isEmpty();
 	}
 
 	@Test
-	public void accessControlAllowCredentials() {
+	void accessControlAllowCredentials() {
 		assertThat(headers.getAccessControlAllowCredentials()).isFalse();
 		headers.setAccessControlAllowCredentials(false);
 		assertThat(headers.getAccessControlAllowCredentials()).isFalse();
@@ -399,7 +432,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void accessControlAllowHeaders() {
+	void accessControlAllowHeaders() {
 		List<String> allowedHeaders = headers.getAccessControlAllowHeaders();
 		assertThat(allowedHeaders).isEmpty();
 		headers.setAccessControlAllowHeaders(Arrays.asList("header1", "header2"));
@@ -408,7 +441,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void accessControlAllowHeadersMultipleValues() {
+	void accessControlAllowHeadersMultipleValues() {
 		List<String> allowedHeaders = headers.getAccessControlAllowHeaders();
 		assertThat(allowedHeaders).isEmpty();
 		headers.add(HttpHeaders.ACCESS_CONTROL_ALLOW_HEADERS, "header1, header2");
@@ -418,7 +451,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void accessControlAllowMethods() {
+	void accessControlAllowMethods() {
 		List<HttpMethod> allowedMethods = headers.getAccessControlAllowMethods();
 		assertThat(allowedMethods).isEmpty();
 		headers.setAccessControlAllowMethods(Arrays.asList(HttpMethod.GET, HttpMethod.POST));
@@ -427,14 +460,14 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void accessControlAllowOrigin() {
+	void accessControlAllowOrigin() {
 		assertThat(headers.getAccessControlAllowOrigin()).isNull();
 		headers.setAccessControlAllowOrigin("*");
 		assertThat(headers.getAccessControlAllowOrigin()).isEqualTo("*");
 	}
 
 	@Test
-	public void accessControlExposeHeaders() {
+	void accessControlExposeHeaders() {
 		List<String> exposedHeaders = headers.getAccessControlExposeHeaders();
 		assertThat(exposedHeaders).isEmpty();
 		headers.setAccessControlExposeHeaders(Arrays.asList("header1", "header2"));
@@ -443,14 +476,14 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void accessControlMaxAge() {
+	void accessControlMaxAge() {
 		assertThat(headers.getAccessControlMaxAge()).isEqualTo(-1);
 		headers.setAccessControlMaxAge(3600);
 		assertThat(headers.getAccessControlMaxAge()).isEqualTo(3600);
 	}
 
 	@Test
-	public void accessControlRequestHeaders() {
+	void accessControlRequestHeaders() {
 		List<String> requestHeaders = headers.getAccessControlRequestHeaders();
 		assertThat(requestHeaders).isEmpty();
 		headers.setAccessControlRequestHeaders(Arrays.asList("header1", "header2"));
@@ -459,53 +492,72 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void accessControlRequestMethod() {
+	void accessControlRequestMethod() {
 		assertThat(headers.getAccessControlRequestMethod()).isNull();
 		headers.setAccessControlRequestMethod(HttpMethod.POST);
 		assertThat(headers.getAccessControlRequestMethod()).isEqualTo(HttpMethod.POST);
 	}
 
 	@Test
-	public void acceptLanguage() {
-		String headerValue = "fr-ch, fr;q=0.9, en-*;q=0.8, de;q=0.7, *;q=0.5";
+	void acceptLanguage() {
+		String headerValue = "fr-ch, fr;q=0.9, en-*;q=0.8, de;q=0.7, *-us;q=0.6, *;q=0.5";
 		headers.setAcceptLanguage(Locale.LanguageRange.parse(headerValue));
 		assertThat(headers.getFirst(HttpHeaders.ACCEPT_LANGUAGE)).isEqualTo(headerValue);
 
-		List<Locale.LanguageRange> expectedRanges = Arrays.asList(
+		List<Locale.LanguageRange> expectedRanges = List.of(
 				new Locale.LanguageRange("fr-ch"),
 				new Locale.LanguageRange("fr", 0.9),
 				new Locale.LanguageRange("en-*", 0.8),
 				new Locale.LanguageRange("de", 0.7),
+				new Locale.LanguageRange("*-us", 0.6),
 				new Locale.LanguageRange("*", 0.5)
 		);
 		assertThat(headers.getAcceptLanguage()).isEqualTo(expectedRanges);
-		assertThat(headers.getAcceptLanguageAsLocales().get(0)).isEqualTo(Locale.forLanguageTag("fr-ch"));
+		assertThat(headers.getAcceptLanguageAsLocales()).containsExactly(
+				Locale.forLanguageTag("fr-ch"),
+				Locale.forLanguageTag("fr"),
+				Locale.forLanguageTag("en"),
+				Locale.forLanguageTag("de"));
 
 		headers.setAcceptLanguageAsLocales(Collections.singletonList(Locale.FRANCE));
-		assertThat(headers.getAcceptLanguageAsLocales().get(0)).isEqualTo(Locale.FRANCE);
+		assertThat(headers.getAcceptLanguageAsLocales()).first().isEqualTo(Locale.FRANCE);
+	}
+
+	@Test // gh-32259
+	void acceptLanguageTrailingSemicolon() {
+		String headerValue = "en-us,en;,nl;";
+		headers.set(HttpHeaders.ACCEPT_LANGUAGE, headerValue);
+		assertThat(headers.getFirst(HttpHeaders.ACCEPT_LANGUAGE)).isEqualTo(headerValue);
+
+		List<Locale.LanguageRange> expectedRanges = Arrays.asList(
+				new Locale.LanguageRange("en-us"),
+				new Locale.LanguageRange("en"),
+				new Locale.LanguageRange("nl")
+		);
+		assertThat(headers.getAcceptLanguage()).isEqualTo(expectedRanges);
 	}
 
 	@Test // SPR-15603
-	public void acceptLanguageWithEmptyValue() throws Exception {
+	void acceptLanguageWithEmptyValue() {
 		this.headers.set(HttpHeaders.ACCEPT_LANGUAGE, "");
 		assertThat(this.headers.getAcceptLanguageAsLocales()).isEqualTo(Collections.emptyList());
 	}
 
 	@Test
-	public void contentLanguage() {
+	void contentLanguage() {
 		headers.setContentLanguage(Locale.FRANCE);
 		assertThat(headers.getContentLanguage()).isEqualTo(Locale.FRANCE);
 		assertThat(headers.getFirst(HttpHeaders.CONTENT_LANGUAGE)).isEqualTo("fr-FR");
 	}
 
 	@Test
-	public void contentLanguageSerialized() {
-		headers.set(HttpHeaders.CONTENT_LANGUAGE,  "de, en_CA");
+	void contentLanguageSerialized() {
+		headers.set(HttpHeaders.CONTENT_LANGUAGE, "de, en_CA");
 		assertThat(headers.getContentLanguage()).as("Expected one (first) locale").isEqualTo(Locale.GERMAN);
 	}
 
 	@Test
-	public void firstDate() {
+	void firstDate() {
 		headers.setDate(HttpHeaders.DATE, 1496370120000L);
 		assertThat(headers.getFirstDate(HttpHeaders.DATE)).isEqualTo(1496370120000L);
 
@@ -517,7 +569,7 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void firstZonedDateTime() {
+	void firstZonedDateTime() {
 		ZonedDateTime date = ZonedDateTime.of(2017, 6, 2, 2, 22, 0, 0, ZoneId.of("GMT"));
 		headers.setZonedDateTime(HttpHeaders.DATE, date);
 		assertThat(headers.getFirst(HttpHeaders.DATE)).isEqualTo("Fri, 02 Jun 2017 02:22:00 GMT");
@@ -542,26 +594,26 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	public void basicAuth() {
+	void basicAuth() {
 		String username = "foo";
 		String password = "bar";
 		headers.setBasicAuth(username, password);
 		String authorization = headers.getFirst(HttpHeaders.AUTHORIZATION);
 		assertThat(authorization).isNotNull();
-		assertThat(authorization.startsWith("Basic ")).isTrue();
+		assertThat(authorization).startsWith("Basic ");
 		byte[] result = Base64.getDecoder().decode(authorization.substring(6).getBytes(StandardCharsets.ISO_8859_1));
 		assertThat(new String(result, StandardCharsets.ISO_8859_1)).isEqualTo("foo:bar");
 	}
 
 	@Test
-	public void basicAuthIllegalChar() {
+	void basicAuthIllegalChar() {
 		String username = "foo";
 		String password = "\u03BB";
 		assertThatIllegalArgumentException().isThrownBy(() -> headers.setBasicAuth(username, password));
 	}
 
 	@Test
-	public void bearerAuth() {
+	void bearerAuth() {
 		String token = "foo";
 
 		headers.setBearerAuth(token);
@@ -569,32 +621,188 @@ public class HttpHeadersTests {
 		assertThat(authorization).isEqualTo("Bearer foo");
 	}
 
-	@Test
-	public void removalFromKeySetRemovesEntryFromUnderlyingMap() {
-		String headerName = "MyHeader";
-		String headerValue = "value";
 
-		assertThat(headers.isEmpty()).isTrue();
-		headers.add(headerName, headerValue);
-		assertThat(headers.containsKey(headerName)).isTrue();
-		headers.keySet().removeIf(key -> key.equals(headerName));
-		assertThat(headers.isEmpty()).isTrue();
-		headers.add(headerName, headerValue);
-		assertThat(headers.get(headerName).get(0)).isEqualTo(headerValue);
-	}
+	@Nested
+	class MapEntriesTests {
 
-	@Test
-	public void removalFromEntrySetRemovesEntryFromUnderlyingMap() {
-		String headerName = "MyHeader";
-		String headerValue = "value";
+		@Test
+		void keySetOperations() {
+			headers.add("Alpha", "apple");
+			headers.add("Bravo", "banana");
+			Set<String> keySet = headers.keySet();
 
-		assertThat(headers.isEmpty()).isTrue();
-		headers.add(headerName, headerValue);
-		assertThat(headers.containsKey(headerName)).isTrue();
-		headers.entrySet().removeIf(entry -> entry.getKey().equals(headerName));
-		assertThat(headers.isEmpty()).isTrue();
-		headers.add(headerName, headerValue);
-		assertThat(headers.get(headerName).get(0)).isEqualTo(headerValue);
+			// Please DO NOT simplify the following with AssertJ's fluent API.
+			//
+			// We explicitly invoke methods directly on HttpHeaders#keySet()
+			// here to check the behavior of the entire contract.
+
+			// isEmpty() and size()
+			assertThat(keySet).isNotEmpty();
+			assertThat(keySet).hasSize(2);
+
+			// contains()
+			assertThat(keySet.contains("Alpha")).as("Alpha should be present").isTrue();
+			assertThat(keySet.contains("alpha")).as("alpha should be present").isTrue();
+			assertThat(keySet.contains("Bravo")).as("Bravo should be present").isTrue();
+			assertThat(keySet.contains("BRAVO")).as("BRAVO should be present").isTrue();
+			assertThat(keySet.contains("Charlie")).as("Charlie should not be present").isFalse();
+
+			// toArray()
+			assertThat(keySet.toArray()).isEqualTo(new String[] {"Alpha", "Bravo"});
+
+			// spliterator() via stream()
+			assertThat(keySet.stream().collect(toList())).isEqualTo(Arrays.asList("Alpha", "Bravo"));
+
+			// iterator()
+			List<String> results = new ArrayList<>();
+			keySet.iterator().forEachRemaining(results::add);
+			assertThat(results).isEqualTo(Arrays.asList("Alpha", "Bravo"));
+
+			// remove()
+			assertThat(keySet.remove("Alpha")).isTrue();
+			assertThat(keySet).hasSize(1);
+			assertThat(headers).hasSize(1);
+			assertThat(keySet.remove("Alpha")).isFalse();
+			assertThat(keySet).hasSize(1);
+			assertThat(headers).hasSize(1);
+
+			// clear()
+			keySet.clear();
+			assertThat(keySet).isEmpty();
+			assertThat(keySet).isEmpty();
+			assertThat(headers).isEmpty();
+			assertThat(headers).isEmpty();
+
+			// Unsupported operations
+			assertThatExceptionOfType(UnsupportedOperationException.class)
+					.isThrownBy(() -> keySet.add("x"));
+			assertThatExceptionOfType(UnsupportedOperationException.class)
+					.isThrownBy(() -> keySet.addAll(Collections.singleton("enigma")));
+		}
+
+		/**
+		 * This method intentionally checks a wider/different range of functionality
+		 * than {@link #removalFromKeySetRemovesEntryFromUnderlyingMap()}.
+		 */
+		@Test // https://github.com/spring-projects/spring-framework/issues/23633
+		void keySetRemovalChecks() {
+			// --- Given ---
+			headers.add("Alpha", "apple");
+			headers.add("Bravo", "banana");
+			assertThat(headers).containsOnlyKeys("Alpha", "Bravo");
+
+			// --- When ---
+			boolean removed = headers.keySet().remove("Alpha");
+
+			// --- Then ---
+
+			// Please DO NOT simplify the following with AssertJ's fluent API.
+			//
+			// We explicitly invoke methods directly on HttpHeaders here to check
+			// the behavior of the entire contract.
+
+			assertThat(removed).isTrue();
+			assertThat(headers.keySet().remove("Alpha")).isFalse();
+			assertThat(headers).hasSize(1);
+			assertThat(headers.containsKey("Alpha")).as("Alpha should have been removed").isFalse();
+			assertThat(headers.containsKey("Bravo")).as("Bravo should be present").isTrue();
+			assertThat(headers.keySet()).containsOnly("Bravo");
+			assertThat(headers.entrySet()).containsOnly(entry("Bravo", List.of("banana")));
+		}
+
+		@Test
+		void removalFromKeySetRemovesEntryFromUnderlyingMap() {
+			String headerName = "MyHeader";
+			String headerValue = "value";
+
+			assertThat(headers).isEmpty();
+			headers.add(headerName, headerValue);
+			assertThat(headers.containsKey(headerName)).isTrue();
+			headers.keySet().removeIf(key -> key.equals(headerName));
+			assertThat(headers).isEmpty();
+			headers.add(headerName, headerValue);
+			assertThat(headers.get(headerName)).containsExactly(headerValue);
+		}
+
+		@Test
+		void removalFromEntrySetRemovesEntryFromUnderlyingMap() {
+			String headerName = "MyHeader";
+			String headerValue = "value";
+
+			assertThat(headers).isEmpty();
+			headers.add(headerName, headerValue);
+			assertThat(headers.containsKey(headerName)).isTrue();
+			headers.entrySet().removeIf(entry -> entry.getKey().equals(headerName));
+			assertThat(headers).isEmpty();
+			headers.add(headerName, headerValue);
+			assertThat(headers.get(headerName)).containsExactly(headerValue);
+		}
+
+		@Test
+		void readOnlyHttpHeadersRetainEntrySetOrder() {
+			headers.add("aardvark", "enigma");
+			headers.add("beaver", "enigma");
+			headers.add("cat", "enigma");
+			headers.add("dog", "enigma");
+			headers.add("elephant", "enigma");
+
+			String[] expectedKeys = new String[] { "aardvark", "beaver", "cat", "dog", "elephant" };
+
+			assertThat(headers.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+
+			HttpHeaders readOnlyHttpHeaders = HttpHeaders.readOnlyHttpHeaders(headers);
+			assertThat(readOnlyHttpHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+		}
+
+		@Test
+		void readOnlyHttpHeadersCopyOrderTest() {
+			headers.add("aardvark", "enigma");
+			headers.add("beaver", "enigma");
+			headers.add("cat", "enigma");
+			headers.add("dog", "enigma");
+			headers.add("elephant", "enigma");
+
+			String[] expectedKeys = new String[] { "aardvark", "beaver", "cat", "dog", "elephant" };
+
+			HttpHeaders readOnlyHttpHeaders = HttpHeaders.readOnlyHttpHeaders(headers);
+
+			HttpHeaders forEachHeaders = new HttpHeaders();
+			readOnlyHttpHeaders.forEach(forEachHeaders::putIfAbsent);
+			assertThat(forEachHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+
+			HttpHeaders putAllHeaders = new HttpHeaders();
+			putAllHeaders.putAll(readOnlyHttpHeaders);
+			assertThat(putAllHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+
+			HttpHeaders addAllHeaders = new HttpHeaders();
+			addAllHeaders.addAll(readOnlyHttpHeaders);
+			assertThat(addAllHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+		}
+
+		@Test // gh-25034
+		void equalsUnwrapsHttpHeaders() {
+			HttpHeaders headers1 = new HttpHeaders();
+			HttpHeaders headers2 = new HttpHeaders(new HttpHeaders(headers1));
+
+			assertThat(headers1).isEqualTo(headers2);
+			assertThat(headers2).isEqualTo(headers1);
+		}
+
+		@Test
+		void getValuesAsList() {
+			HttpHeaders headers = new HttpHeaders();
+			headers.add("Foo", "Bar");
+			headers.add("Foo", "Baz, Qux");
+			headers.add("Quux", "\t\"Corge\", \"Grault\"");
+			headers.add("Garply", " Waldo \"Fred\\!\", \"\tPlugh, Xyzzy! \"");
+			headers.add("Example-Dates", "\"Sat, 04 May 1996\", \"Wed, 14 Sep 2005\"");
+
+			assertThat(headers.getValuesAsList("Foo")).containsExactly("Bar", "Baz", "Qux");
+			assertThat(headers.getValuesAsList("Quux")).containsExactly("Corge", "Grault");
+			assertThat(headers.getValuesAsList("Garply")).containsExactly("Waldo \"Fred\\!\"", "\tPlugh, Xyzzy! ");
+			assertThat(headers.getValuesAsList("Example-Dates")).containsExactly("Sat, 04 May 1996", "Wed, 14 Sep 2005");
+		}
+
 	}
 
 }
