@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,9 @@
 
 package org.springframework.web.bind;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.tests.Assume;
-import org.springframework.tests.TestGroup;
-import org.springframework.util.StopWatch;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -31,16 +28,18 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  * @author Chris Beams
  * @since 06.08.2003
  */
-public class ServletRequestUtilsTests {
+class ServletRequestUtilsTests {
+
+	private final MockHttpServletRequest request = new MockHttpServletRequest();
+
 
 	@Test
-	public void testIntParameter() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
+	void testIntParameter() throws ServletRequestBindingException {
 		request.addParameter("param1", "5");
 		request.addParameter("param2", "e");
 		request.addParameter("paramEmpty", "");
 
-		assertThat(ServletRequestUtils.getIntParameter(request, "param1")).isEqualTo(new Integer(5));
+		assertThat(ServletRequestUtils.getIntParameter(request, "param1")).isEqualTo(5);
 		assertThat(ServletRequestUtils.getIntParameter(request, "param1", 6)).isEqualTo(5);
 		assertThat(ServletRequestUtils.getRequiredIntParameter(request, "param1")).isEqualTo(5);
 
@@ -48,7 +47,7 @@ public class ServletRequestUtilsTests {
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredIntParameter(request, "param2"));
 
-		assertThat(ServletRequestUtils.getIntParameter(request, "param3")).isEqualTo(null);
+		assertThat(ServletRequestUtils.getIntParameter(request, "param3")).isNull();
 		assertThat(ServletRequestUtils.getIntParameter(request, "param3", 6)).isEqualTo(6);
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredIntParameter(request, "param3"));
@@ -58,9 +57,8 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testIntParameters() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		request.addParameter("param", new String[] {"1", "2", "3"});
+	void testIntParameters() throws ServletRequestBindingException {
+		request.addParameter("param", "1", "2", "3");
 
 		request.addParameter("param2", "1");
 		request.addParameter("param2", "2");
@@ -68,7 +66,7 @@ public class ServletRequestUtilsTests {
 
 		int[] array = new int[] {1, 2, 3};
 		int[] values = ServletRequestUtils.getRequiredIntParameters(request, "param");
-		assertThat(3).isEqualTo(values.length);
+		assertThat(values).hasSize(3);
 		for (int i = 0; i < array.length; i++) {
 			assertThat(array[i]).isEqualTo(values[i]);
 		}
@@ -78,13 +76,12 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testLongParameter() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
+	void testLongParameter() throws ServletRequestBindingException {
 		request.addParameter("param1", "5");
 		request.addParameter("param2", "e");
 		request.addParameter("paramEmpty", "");
 
-		assertThat(ServletRequestUtils.getLongParameter(request, "param1")).isEqualTo(new Long(5L));
+		assertThat(ServletRequestUtils.getLongParameter(request, "param1")).isEqualTo(Long.valueOf(5L));
 		assertThat(ServletRequestUtils.getLongParameter(request, "param1", 6L)).isEqualTo(5L);
 		assertThat(ServletRequestUtils.getRequiredIntParameter(request, "param1")).isEqualTo(5L);
 
@@ -92,7 +89,7 @@ public class ServletRequestUtilsTests {
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredLongParameter(request, "param2"));
 
-		assertThat(ServletRequestUtils.getLongParameter(request, "param3")).isEqualTo(null);
+		assertThat(ServletRequestUtils.getLongParameter(request, "param3")).isNull();
 		assertThat(ServletRequestUtils.getLongParameter(request, "param3", 6L)).isEqualTo(6L);
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredLongParameter(request, "param3"));
@@ -102,9 +99,8 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testLongParameters() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		request.setParameter("param", new String[] {"1", "2", "3"});
+	void testLongParameters() throws ServletRequestBindingException {
+		request.setParameter("param", "1", "2", "3");
 
 		request.setParameter("param2", "0");
 		request.setParameter("param2", "1");
@@ -117,7 +113,7 @@ public class ServletRequestUtilsTests {
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredLongParameters(request, "param2"));
 
-		request.setParameter("param2", new String[] {"1", "2"});
+		request.setParameter("param2", "1", "2");
 		values = ServletRequestUtils.getRequiredLongParameters(request, "param2");
 		assertThat(values).containsExactly(1, 2);
 
@@ -127,22 +123,21 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testFloatParameter() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
+	void testFloatParameter() throws ServletRequestBindingException {
 		request.addParameter("param1", "5.5");
 		request.addParameter("param2", "e");
 		request.addParameter("paramEmpty", "");
 
-		assertThat(ServletRequestUtils.getFloatParameter(request, "param1").equals(new Float(5.5f))).isTrue();
-		assertThat(ServletRequestUtils.getFloatParameter(request, "param1", 6.5f) == 5.5f).isTrue();
-		assertThat(ServletRequestUtils.getRequiredFloatParameter(request, "param1") == 5.5f).isTrue();
+		assertThat(ServletRequestUtils.getFloatParameter(request, "param1")).isEqualTo(Float.valueOf(5.5f));
+		assertThat(ServletRequestUtils.getFloatParameter(request, "param1", 6.5f)).isEqualTo(5.5f);
+		assertThat(ServletRequestUtils.getRequiredFloatParameter(request, "param1")).isEqualTo(5.5f);
 
-		assertThat(ServletRequestUtils.getFloatParameter(request, "param2", 6.5f) == 6.5f).isTrue();
+		assertThat(ServletRequestUtils.getFloatParameter(request, "param2", 6.5f)).isEqualTo(6.5f);
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredFloatParameter(request, "param2"));
 
-		assertThat(ServletRequestUtils.getFloatParameter(request, "param3") == null).isTrue();
-		assertThat(ServletRequestUtils.getFloatParameter(request, "param3", 6.5f) == 6.5f).isTrue();
+		assertThat(ServletRequestUtils.getFloatParameter(request, "param3")).isNull();
+		assertThat(ServletRequestUtils.getFloatParameter(request, "param3", 6.5f)).isEqualTo(6.5f);
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredFloatParameter(request, "param3"));
 
@@ -151,9 +146,8 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testFloatParameters() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		request.addParameter("param", new String[] {"1.5", "2.5", "3"});
+	void testFloatParameters() throws ServletRequestBindingException {
+		request.addParameter("param", "1.5", "2.5", "3");
 
 		request.addParameter("param2", "1.5");
 		request.addParameter("param2", "2");
@@ -167,22 +161,21 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testDoubleParameter() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
+	void testDoubleParameter() throws ServletRequestBindingException {
 		request.addParameter("param1", "5.5");
 		request.addParameter("param2", "e");
 		request.addParameter("paramEmpty", "");
 
-		assertThat(ServletRequestUtils.getDoubleParameter(request, "param1").equals(new Double(5.5))).isTrue();
-		assertThat(ServletRequestUtils.getDoubleParameter(request, "param1", 6.5) == 5.5).isTrue();
-		assertThat(ServletRequestUtils.getRequiredDoubleParameter(request, "param1") == 5.5).isTrue();
+		assertThat(ServletRequestUtils.getDoubleParameter(request, "param1")).isEqualTo(Double.valueOf(5.5));
+		assertThat(ServletRequestUtils.getDoubleParameter(request, "param1", 6.5)).isEqualTo(5.5);
+		assertThat(ServletRequestUtils.getRequiredDoubleParameter(request, "param1")).isEqualTo(5.5);
 
-		assertThat(ServletRequestUtils.getDoubleParameter(request, "param2", 6.5) == 6.5).isTrue();
+		assertThat(ServletRequestUtils.getDoubleParameter(request, "param2", 6.5)).isEqualTo(6.5);
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredDoubleParameter(request, "param2"));
 
-		assertThat(ServletRequestUtils.getDoubleParameter(request, "param3") == null).isTrue();
-		assertThat(ServletRequestUtils.getDoubleParameter(request, "param3", 6.5) == 6.5).isTrue();
+		assertThat(ServletRequestUtils.getDoubleParameter(request, "param3")).isNull();
+		assertThat(ServletRequestUtils.getDoubleParameter(request, "param3", 6.5)).isEqualTo(6.5);
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredDoubleParameter(request, "param3"));
 
@@ -191,9 +184,8 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testDoubleParameters() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		request.addParameter("param", new String[] {"1.5", "2.5", "3"});
+	void testDoubleParameters() throws ServletRequestBindingException {
+		request.addParameter("param", "1.5", "2.5", "3");
 
 		request.addParameter("param2", "1.5");
 		request.addParameter("param2", "2");
@@ -206,8 +198,7 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testBooleanParameter() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
+	void testBooleanParameter() throws ServletRequestBindingException {
 		request.addParameter("param1", "true");
 		request.addParameter("param2", "e");
 		request.addParameter("param4", "yes");
@@ -221,7 +212,7 @@ public class ServletRequestUtilsTests {
 		assertThat(ServletRequestUtils.getBooleanParameter(request, "param2", true)).isFalse();
 		assertThat(ServletRequestUtils.getRequiredBooleanParameter(request, "param2")).isFalse();
 
-		assertThat(ServletRequestUtils.getBooleanParameter(request, "param3") == null).isTrue();
+		assertThat(ServletRequestUtils.getBooleanParameter(request, "param3")).isNull();
 		assertThat(ServletRequestUtils.getBooleanParameter(request, "param3", true)).isTrue();
 		assertThatExceptionOfType(ServletRequestBindingException.class).isThrownBy(() ->
 				ServletRequestUtils.getRequiredBooleanParameter(request, "param3"));
@@ -235,9 +226,8 @@ public class ServletRequestUtilsTests {
 	}
 
 	@Test
-	public void testBooleanParameters() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		request.addParameter("param", new String[] {"true", "yes", "off", "1", "bogus"});
+	void testBooleanParameters() throws ServletRequestBindingException {
+		request.addParameter("param", "true", "yes", "off", "1", "bogus");
 
 		request.addParameter("param2", "false");
 		request.addParameter("param2", "true");
@@ -245,22 +235,21 @@ public class ServletRequestUtilsTests {
 
 		boolean[] array = new boolean[] {true, true, false, true, false};
 		boolean[] values = ServletRequestUtils.getRequiredBooleanParameters(request, "param");
-		assertThat(array.length).isEqualTo(values.length);
+		assertThat(array).hasSameSizeAs(values);
 		for (int i = 0; i < array.length; i++) {
 			assertThat(array[i]).isEqualTo(values[i]);
 		}
 
 		array = new boolean[] {false, true, false};
 		values = ServletRequestUtils.getRequiredBooleanParameters(request, "param2");
-		assertThat(array.length).isEqualTo(values.length);
+		assertThat(array).hasSameSizeAs(values);
 		for (int i = 0; i < array.length; i++) {
 			assertThat(array[i]).isEqualTo(values[i]);
 		}
 	}
 
 	@Test
-	public void testStringParameter() throws ServletRequestBindingException {
-		MockHttpServletRequest request = new MockHttpServletRequest();
+	void testStringParameter() throws ServletRequestBindingException {
 		request.addParameter("param1", "str");
 		request.addParameter("paramEmpty", "");
 
@@ -276,90 +265,6 @@ public class ServletRequestUtilsTests {
 
 		assertThat(ServletRequestUtils.getStringParameter(request, "paramEmpty")).isEmpty();
 		assertThat(ServletRequestUtils.getRequiredStringParameter(request, "paramEmpty")).isEmpty();
-	}
-
-	@Test
-	public void testGetIntParameterWithDefaultValueHandlingIsFastEnough() {
-		Assume.group(TestGroup.PERFORMANCE);
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		StopWatch sw = new StopWatch();
-		sw.start();
-		for (int i = 0; i < 1000000; i++) {
-			ServletRequestUtils.getIntParameter(request, "nonExistingParam", 0);
-		}
-		sw.stop();
-		System.out.println(sw.getTotalTimeMillis());
-		assertThat(sw.getTotalTimeMillis() < 250).as("getStringParameter took too long: " + sw.getTotalTimeMillis()).isTrue();
-	}
-
-	@Test
-	public void testGetLongParameterWithDefaultValueHandlingIsFastEnough() {
-		Assume.group(TestGroup.PERFORMANCE);
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		StopWatch sw = new StopWatch();
-		sw.start();
-		for (int i = 0; i < 1000000; i++) {
-			ServletRequestUtils.getLongParameter(request, "nonExistingParam", 0);
-		}
-		sw.stop();
-		System.out.println(sw.getTotalTimeMillis());
-		assertThat(sw.getTotalTimeMillis() < 250).as("getStringParameter took too long: " + sw.getTotalTimeMillis()).isTrue();
-	}
-
-	@Test
-	public void testGetFloatParameterWithDefaultValueHandlingIsFastEnough() {
-		Assume.group(TestGroup.PERFORMANCE);
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		StopWatch sw = new StopWatch();
-		sw.start();
-		for (int i = 0; i < 1000000; i++) {
-			ServletRequestUtils.getFloatParameter(request, "nonExistingParam", 0f);
-		}
-		sw.stop();
-		System.out.println(sw.getTotalTimeMillis());
-		assertThat(sw.getTotalTimeMillis() < 250).as("getStringParameter took too long: " + sw.getTotalTimeMillis()).isTrue();
-	}
-
-	@Test
-	public void testGetDoubleParameterWithDefaultValueHandlingIsFastEnough() {
-		Assume.group(TestGroup.PERFORMANCE);
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		StopWatch sw = new StopWatch();
-		sw.start();
-		for (int i = 0; i < 1000000; i++) {
-			ServletRequestUtils.getDoubleParameter(request, "nonExistingParam", 0d);
-		}
-		sw.stop();
-		System.out.println(sw.getTotalTimeMillis());
-		assertThat(sw.getTotalTimeMillis() < 250).as("getStringParameter took too long: " + sw.getTotalTimeMillis()).isTrue();
-	}
-
-	@Test
-	public void testGetBooleanParameterWithDefaultValueHandlingIsFastEnough() {
-		Assume.group(TestGroup.PERFORMANCE);
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		StopWatch sw = new StopWatch();
-		sw.start();
-		for (int i = 0; i < 1000000; i++) {
-			ServletRequestUtils.getBooleanParameter(request, "nonExistingParam", false);
-		}
-		sw.stop();
-		System.out.println(sw.getTotalTimeMillis());
-		assertThat(sw.getTotalTimeMillis() < 250).as("getStringParameter took too long: " + sw.getTotalTimeMillis()).isTrue();
-	}
-
-	@Test
-	public void testGetStringParameterWithDefaultValueHandlingIsFastEnough() {
-		Assume.group(TestGroup.PERFORMANCE);
-		MockHttpServletRequest request = new MockHttpServletRequest();
-		StopWatch sw = new StopWatch();
-		sw.start();
-		for (int i = 0; i < 1000000; i++) {
-			ServletRequestUtils.getStringParameter(request, "nonExistingParam", "defaultValue");
-		}
-		sw.stop();
-		System.out.println(sw.getTotalTimeMillis());
-		assertThat(sw.getTotalTimeMillis() < 250).as("getStringParameter took too long: " + sw.getTotalTimeMillis()).isTrue();
 	}
 
 }
