@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,118 +16,111 @@
 
 package org.springframework.web.reactive.result.view;
 
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Set;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import reactor.test.StepVerifier;
 
 import org.springframework.core.codec.CharSequenceEncoder;
-import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.support.DataBufferTestUtils;
 import org.springframework.http.MediaType;
 import org.springframework.http.codec.json.Jackson2JsonEncoder;
 import org.springframework.http.codec.xml.Jaxb2XmlEncoder;
-import org.springframework.mock.http.server.reactive.test.MockServerHttpRequest;
-import org.springframework.mock.web.test.server.MockServerWebExchange;
-import org.springframework.ui.ExtendedModelMap;
-import org.springframework.ui.ModelMap;
+import org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest;
+import org.springframework.web.testfixture.server.MockServerWebExchange;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 
 /**
- * Unit tests for {@link HttpMessageWriterView}.
+ * Tests for {@link HttpMessageWriterView}.
+ *
  * @author Rossen Stoyanchev
  */
-public class HttpMessageWriterViewTests {
+class HttpMessageWriterViewTests {
 
 	private HttpMessageWriterView view = new HttpMessageWriterView(new Jackson2JsonEncoder());
 
-	private final ModelMap model = new ExtendedModelMap();
+	private final Map<String, Object> model = new HashMap<>();
 
 	private final MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get("/"));
 
 
 	@Test
-	public void supportedMediaTypes() throws Exception {
-		assertThat(this.view.getSupportedMediaTypes()).isEqualTo(Arrays.asList(
+	void supportedMediaTypes() {
+		assertThat(this.view.getSupportedMediaTypes()).containsExactly(
 				MediaType.APPLICATION_JSON,
-				MediaType.parseMediaType("application/*+json")));
+				MediaType.parseMediaType("application/*+json"),
+				MediaType.APPLICATION_NDJSON);
 	}
 
 	@Test
-	public void singleMatch() throws Exception {
-		this.view.setModelKeys(Collections.singleton("foo2"));
-		this.model.addAttribute("foo1", Collections.singleton("bar1"));
-		this.model.addAttribute("foo2", Collections.singleton("bar2"));
-		this.model.addAttribute("foo3", Collections.singleton("bar3"));
+	void singleMatch() throws Exception {
+		this.view.setModelKeys(Set.of("foo2"));
+		this.model.put("foo1", Set.of("bar1"));
+		this.model.put("foo2", Set.of("bar2"));
+		this.model.put("foo3", Set.of("bar3"));
 
 		assertThat(doRender()).isEqualTo("[\"bar2\"]");
 	}
 
 	@Test
-	public void noMatch() throws Exception {
-		this.view.setModelKeys(Collections.singleton("foo2"));
-		this.model.addAttribute("foo1", "bar1");
+	void noMatch() throws Exception {
+		this.view.setModelKeys(Set.of("foo2"));
+		this.model.put("foo1", "bar1");
 
-		assertThat(doRender()).isEqualTo("");
+		assertThat(doRender()).isEmpty();
 	}
 
 	@Test
-	public void noMatchBecauseNotSupported() throws Exception {
+	void noMatchBecauseNotSupported() throws Exception {
 		this.view = new HttpMessageWriterView(new Jaxb2XmlEncoder());
-		this.view.setModelKeys(new HashSet<>(Collections.singletonList("foo1")));
-		this.model.addAttribute("foo1", "bar1");
+		this.view.setModelKeys(Set.of("foo1"));
+		this.model.put("foo1", "bar1");
 
-		assertThat(doRender()).isEqualTo("");
+		assertThat(doRender()).isEmpty();
 	}
 
 	@Test
-	public void multipleMatches() throws Exception {
-		this.view.setModelKeys(new HashSet<>(Arrays.asList("foo1", "foo2")));
-		this.model.addAttribute("foo1", Collections.singleton("bar1"));
-		this.model.addAttribute("foo2", Collections.singleton("bar2"));
-		this.model.addAttribute("foo3", Collections.singleton("bar3"));
+	void multipleMatches() throws Exception {
+		this.view.setModelKeys(Set.of("foo1", "foo2"));
+		this.model.put("foo1", Set.of("bar1"));
+		this.model.put("foo2", Set.of("bar2"));
+		this.model.put("foo3", Set.of("bar3"));
 
 		assertThat(doRender()).isEqualTo("{\"foo1\":[\"bar1\"],\"foo2\":[\"bar2\"]}");
 	}
 
 	@Test
-	public void multipleMatchesNotSupported() throws Exception {
+	void multipleMatchesNotSupported() throws Exception {
 		this.view = new HttpMessageWriterView(CharSequenceEncoder.allMimeTypes());
-		this.view.setModelKeys(new HashSet<>(Arrays.asList("foo1", "foo2")));
-		this.model.addAttribute("foo1", "bar1");
-		this.model.addAttribute("foo2", "bar2");
+		this.view.setModelKeys(Set.of("foo1", "foo2"));
+		this.model.put("foo1", "bar1");
+		this.model.put("foo2", "bar2");
 
-		assertThatIllegalStateException().isThrownBy(
-				this::doRender)
-			.withMessageContaining("Map rendering is not supported");
+		assertThatIllegalStateException()
+				.isThrownBy(this::doRender)
+				.withMessageContaining("Map rendering is not supported");
 	}
 
 	@Test
-	public void render() throws Exception {
+	void render() throws Exception {
 		Map<String, String> pojoData = new LinkedHashMap<>();
 		pojoData.put("foo", "f");
 		pojoData.put("bar", "b");
-		this.model.addAttribute("pojoData", pojoData);
-		this.view.setModelKeys(Collections.singleton("pojoData"));
+		this.model.put("pojoData", pojoData);
+		this.view.setModelKeys(Set.of("pojoData"));
 
 		this.view.render(this.model, MediaType.APPLICATION_JSON, exchange).block(Duration.ZERO);
 
 		StepVerifier.create(this.exchange.getResponse().getBody())
-				.consumeNextWith(buf -> assertThat(dumpString(buf)).isEqualTo("{\"foo\":\"f\",\"bar\":\"b\"}"))
+				.consumeNextWith(buf -> assertThat(buf.toString(UTF_8)).isEqualTo("{\"foo\":\"f\",\"bar\":\"b\"}"))
 				.expectComplete()
 				.verify();
-	}
-
-	private String dumpString(DataBuffer buf) {
-		return DataBufferTestUtils.dumpString(buf, StandardCharsets.UTF_8);
 	}
 
 	private String doRender() {
