@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,14 +21,11 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.core.Ordered;
 import org.springframework.lang.Nullable;
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockHttpServletResponse;
 import org.springframework.ui.ModelMap;
 import org.springframework.util.AntPathMatcher;
 import org.springframework.util.PathMatcher;
@@ -39,9 +36,12 @@ import org.springframework.web.servlet.handler.MappedInterceptor;
 import org.springframework.web.servlet.handler.WebRequestHandlerInterceptorAdapter;
 import org.springframework.web.servlet.i18n.LocaleChangeInterceptor;
 import org.springframework.web.servlet.theme.ThemeChangeInterceptor;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
+import static org.mockito.Mockito.mock;
 
 /**
  * Test fixture with a {@link InterceptorRegistry}, two {@link HandlerInterceptor}s and two
@@ -50,6 +50,7 @@ import static org.assertj.core.api.Assertions.fail;
  * @author Rossen Stoyanchev
  * @author Eko Kurniawan Khannedy
  */
+@SuppressWarnings("deprecation")
 public class InterceptorRegistryTests {
 
 	private InterceptorRegistry registry;
@@ -67,22 +68,22 @@ public class InterceptorRegistryTests {
 	private final MockHttpServletResponse response = new MockHttpServletResponse();
 
 
-	@Before
-	public void setUp() {
+	@BeforeEach
+	void setUp() {
 		this.registry = new InterceptorRegistry();
 		this.webInterceptor1 = new TestWebRequestInterceptor();
 		this.webInterceptor2 = new TestWebRequestInterceptor();
 	}
 
 	@Test
-	public void addInterceptor() {
+	void addInterceptor() {
 		this.registry.addInterceptor(this.interceptor1);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
-		assertThat(interceptors).isEqualTo(Arrays.asList(this.interceptor1));
+		assertThat(interceptors).isEqualTo(List.of(this.interceptor1));
 	}
 
 	@Test
-	public void addTwoInterceptors() {
+	void addTwoInterceptors() {
 		this.registry.addInterceptor(this.interceptor1);
 		this.registry.addInterceptor(this.interceptor2);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
@@ -90,38 +91,38 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void addInterceptorsWithUrlPatterns() {
+	void addInterceptorsWithUrlPatterns() {
 		this.registry.addInterceptor(this.interceptor1).addPathPatterns("/path1/**").excludePathPatterns("/path1/secret");
 		this.registry.addInterceptor(this.interceptor2).addPathPatterns("/path2");
 
-		assertThat(getInterceptorsForPath("/path1/test")).isEqualTo(Arrays.asList(this.interceptor1));
-		assertThat(getInterceptorsForPath("/path2")).isEqualTo(Arrays.asList(this.interceptor2));
-		assertThat(getInterceptorsForPath("/path1/secret")).isEqualTo(Collections.emptyList());
+		assertThat(getInterceptorsForPath("/path1/test")).containsExactly(this.interceptor1);
+		assertThat(getInterceptorsForPath("/path2")).containsExactly(this.interceptor2);
+		assertThat(getInterceptorsForPath("/path1/secret")).isEmpty();
 	}
 
 	@Test
-	public void addWebRequestInterceptor() throws Exception {
+	void addWebRequestInterceptor() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
 
-		assertThat(interceptors.size()).isEqualTo(1);
+		assertThat(interceptors).hasSize(1);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor1);
 	}
 
 	@Test
-	public void addWebRequestInterceptors() throws Exception {
+	void addWebRequestInterceptors() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1);
 		this.registry.addWebRequestInterceptor(this.webInterceptor2);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
 
-		assertThat(interceptors.size()).isEqualTo(2);
+		assertThat(interceptors).hasSize(2);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor1);
 		verifyWebInterceptor(interceptors.get(1), this.webInterceptor2);
 	}
 
 	@Test
-	public void addInterceptorsWithCustomPathMatcher() {
-		PathMatcher pathMatcher = Mockito.mock(PathMatcher.class);
+	void addInterceptorsWithCustomPathMatcher() {
+		PathMatcher pathMatcher = mock();
 		this.registry.addInterceptor(interceptor1).addPathPatterns("/path1/**").pathMatcher(pathMatcher);
 
 		MappedInterceptor mappedInterceptor = (MappedInterceptor) this.registry.getInterceptors().get(0);
@@ -129,16 +130,16 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void addWebRequestInterceptorsWithUrlPatterns() throws Exception {
+	void addWebRequestInterceptorsWithUrlPatterns() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1).addPathPatterns("/path1");
 		this.registry.addWebRequestInterceptor(this.webInterceptor2).addPathPatterns("/path2");
 
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath("/path1");
-		assertThat(interceptors.size()).isEqualTo(1);
+		assertThat(interceptors).hasSize(1);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor1);
 
 		interceptors = getInterceptorsForPath("/path2");
-		assertThat(interceptors.size()).isEqualTo(1);
+		assertThat(interceptors).hasSize(1);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor2);
 	}
 
@@ -153,27 +154,27 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void orderedInterceptors() {
+	void orderedInterceptors() {
 		this.registry.addInterceptor(this.interceptor1).order(Ordered.LOWEST_PRECEDENCE);
 		this.registry.addInterceptor(this.interceptor2).order(Ordered.HIGHEST_PRECEDENCE);
 
 		List<Object> interceptors = this.registry.getInterceptors();
-		assertThat(interceptors.size()).isEqualTo(2);
+		assertThat(interceptors).hasSize(2);
 
-		assertThat(interceptors.get(0)).isSameAs(this.interceptor2);
-		assertThat(interceptors.get(1)).isSameAs(this.interceptor1);
+		assertThat(interceptors).element(0).isSameAs(this.interceptor2);
+		assertThat(interceptors).element(1).isSameAs(this.interceptor1);
 	}
 
 	@Test
-	public void nonOrderedInterceptors() {
+	void nonOrderedInterceptors() {
 		this.registry.addInterceptor(this.interceptor1).order(0);
 		this.registry.addInterceptor(this.interceptor2).order(0);
 
 		List<Object> interceptors = this.registry.getInterceptors();
-		assertThat(interceptors.size()).isEqualTo(2);
+		assertThat(interceptors).hasSize(2);
 
-		assertThat(interceptors.get(0)).isSameAs(this.interceptor1);
-		assertThat(interceptors.get(1)).isSameAs(this.interceptor2);
+		assertThat(interceptors).element(0).isSameAs(this.interceptor1);
+		assertThat(interceptors).element(1).isSameAs(this.interceptor2);
 	}
 
 
@@ -181,8 +182,7 @@ public class InterceptorRegistryTests {
 		PathMatcher pathMatcher = new AntPathMatcher();
 		List<HandlerInterceptor> result = new ArrayList<>();
 		for (Object interceptor : this.registry.getInterceptors()) {
-			if (interceptor instanceof MappedInterceptor) {
-				MappedInterceptor mappedInterceptor = (MappedInterceptor) interceptor;
+			if (interceptor instanceof MappedInterceptor mappedInterceptor) {
 				if (mappedInterceptor.matches(lookupPath, pathMatcher)) {
 					result.add(mappedInterceptor.getInterceptor());
 				}
@@ -212,16 +212,16 @@ public class InterceptorRegistryTests {
 		private boolean preHandleInvoked = false;
 
 		@Override
-		public void preHandle(WebRequest request) throws Exception {
+		public void preHandle(WebRequest request) {
 			preHandleInvoked = true;
 		}
 
 		@Override
-		public void postHandle(WebRequest request, @Nullable ModelMap model) throws Exception {
+		public void postHandle(WebRequest request, @Nullable ModelMap model) {
 		}
 
 		@Override
-		public void afterCompletion(WebRequest request, @Nullable Exception ex) throws Exception {
+		public void afterCompletion(WebRequest request, @Nullable Exception ex) {
 		}
 	}
 
