@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,15 +16,13 @@
 
 package org.springframework.web.servlet.tags;
 
-import java.util.Arrays;
 import java.util.List;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.jsp.JspException;
-import javax.servlet.jsp.PageContext;
-import javax.servlet.jsp.tagext.Tag;
 
-import org.junit.Test;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.jsp.JspException;
+import jakarta.servlet.jsp.PageContext;
+import jakarta.servlet.jsp.tagext.Tag;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.context.MessageSourceResolvable;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
@@ -36,13 +34,13 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Juergen Hoeller
  * @author Alef Arendsen
  */
-public class ThemeTagTests extends AbstractTagTests {
+@SuppressWarnings("deprecation")
+class ThemeTagTests extends AbstractTagTests {
 
 	@Test
-	@SuppressWarnings("serial")
-	public void themeTag() throws JspException {
+	void themeTag() throws JspException {
 		PageContext pc = createPageContext();
-		final StringBuffer message = new StringBuffer();
+		final StringBuilder message = new StringBuilder();
 		ThemeTag tag = new ThemeTag() {
 			@Override
 			protected void writeMessage(String msg) {
@@ -51,14 +49,14 @@ public class ThemeTagTests extends AbstractTagTests {
 		};
 		tag.setPageContext(pc);
 		tag.setCode("themetest");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertThat(tag.doStartTag()).as("Correct doStartTag return value").isEqualTo(Tag.EVAL_BODY_INCLUDE);
 		assertThat(tag.doEndTag()).as("Correct doEndTag return value").isEqualTo(Tag.EVAL_PAGE);
 		assertThat(message.toString()).isEqualTo("theme test message");
 	}
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void requestContext() throws ServletException {
+	void requestContext() {
 		PageContext pc = createPageContext();
 		RequestContext rc = new RequestContext((HttpServletRequest) pc.getRequest());
 		assertThat(rc.getThemeMessage("themetest")).isEqualTo("theme test message");
@@ -66,7 +64,7 @@ public class ThemeTagTests extends AbstractTagTests {
 		assertThat(rc.getThemeMessage("themetest", "default")).isEqualTo("theme test message");
 		assertThat(rc.getThemeMessage("themetest", (Object[]) null, "default")).isEqualTo("theme test message");
 		assertThat(rc.getThemeMessage("themetestArgs", new String[]{"arg1"})).isEqualTo("theme test message arg1");
-		assertThat(rc.getThemeMessage("themetestArgs", Arrays.asList(new String[]{"arg1"}))).isEqualTo("theme test message arg1");
+		assertThat(rc.getThemeMessage("themetestArgs", List.of("arg1"))).isEqualTo("theme test message arg1");
 		assertThat(rc.getThemeMessage("themetesta", "default")).isEqualTo("default");
 		assertThat(rc.getThemeMessage("themetesta", (List) null, "default")).isEqualTo("default");
 		MessageSourceResolvable resolvable = new DefaultMessageSourceResolvable(new String[] {"themetest"});
