@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,25 +23,25 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.jsp.tagext.BodyTag;
-import javax.servlet.jsp.tagext.Tag;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.jsp.tagext.BodyTag;
+import jakarta.servlet.jsp.tagext.Tag;
 import org.dom4j.Document;
 import org.dom4j.Element;
 import org.dom4j.Node;
 import org.dom4j.io.SAXReader;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockPageContext;
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.Errors;
 import org.springframework.web.servlet.support.BindStatus;
 import org.springframework.web.servlet.support.RequestContext;
 import org.springframework.web.servlet.tags.RequestContextAwareTag;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockPageContext;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -52,7 +52,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Jeremy Grelle
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-public class OptionsTagTests extends AbstractHtmlElementTagTests {
+class OptionsTagTests extends AbstractHtmlElementTagTests {
 
 	private static final String COMMAND_NAME = "testBean";
 
@@ -60,7 +60,6 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	private OptionsTag tag;
 
 	@Override
-	@SuppressWarnings("serial")
 	protected void onSetUp() {
 		this.tag = new OptionsTag() {
 			@Override
@@ -86,7 +85,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withCollection() throws Exception {
+	void withCollection() throws Exception {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
 
@@ -116,7 +115,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withCollectionAndDynamicAttributes() throws Exception {
+	void withCollectionAndDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -154,11 +153,11 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withCollectionAndCustomEditor() throws Exception {
+	void withCollectionAndCustomEditor() throws Exception {
 		PropertyEditor propertyEditor = new SimpleFloatEditor();
 
 		TestBean target = new TestBean();
-		target.setMyFloat(new Float("12.34"));
+		target.setMyFloat(Float.valueOf("12.34"));
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(target, COMMAND_NAME);
 		errors.getPropertyAccessor().registerCustomEditor(Float.class, propertyEditor);
@@ -168,12 +167,12 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.myFloat", false));
 
 		List<Float> floats = new ArrayList<>();
-		floats.add(new Float("12.30"));
-		floats.add(new Float("12.31"));
-		floats.add(new Float("12.32"));
-		floats.add(new Float("12.33"));
-		floats.add(new Float("12.34"));
-		floats.add(new Float("12.35"));
+		floats.add(Float.valueOf("12.30"));
+		floats.add(Float.valueOf("12.31"));
+		floats.add(Float.valueOf("12.32"));
+		floats.add(Float.valueOf("12.33"));
+		floats.add(Float.valueOf("12.34"));
+		floats.add(Float.valueOf("12.35"));
 
 		this.tag.setItems(floats);
 		int result = this.tag.doStartTag();
@@ -200,7 +199,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withItemsNullReference() throws Exception {
+	void withItemsNullReference() throws Exception {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
 
@@ -221,7 +220,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withoutItems() throws Exception {
+	void withoutItems() throws Exception {
 		this.tag.setItemValue("isoCode");
 		this.tag.setItemLabel("name");
 		this.selectTag.setPath("testBean");
@@ -242,7 +241,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withoutItemsEnumParent() throws Exception {
+	void withoutItemsEnumParent() throws Exception {
 		BeanWithEnum testBean = new BeanWithEnum();
 		testBean.setTestEnum(TestEnum.VALUE_2);
 		getPageContext().getRequest().setAttribute("testBean", testBean);
@@ -261,7 +260,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 
-		assertThat(rootElement.elements().size()).isEqualTo(2);
+		assertThat(rootElement.elements()).hasSize(2);
 		Node value1 = rootElement.selectSingleNode("option[@value = 'VALUE_1']");
 		Node value2 = rootElement.selectSingleNode("option[@value = 'VALUE_2']");
 		assertThat(value1.getText()).isEqualTo("TestEnum: VALUE_1");
@@ -270,7 +269,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withoutItemsEnumParentWithExplicitLabelsAndValues() throws Exception {
+	void withoutItemsEnumParentWithExplicitLabelsAndValues() throws Exception {
 		BeanWithEnum testBean = new BeanWithEnum();
 		testBean.setTestEnum(TestEnum.VALUE_2);
 		getPageContext().getRequest().setAttribute("testBean", testBean);
@@ -291,7 +290,7 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 
-		assertThat(rootElement.elements().size()).isEqualTo(2);
+		assertThat(rootElement.elements()).hasSize(2);
 		Node value1 = rootElement.selectSingleNode("option[@value = 'Value: VALUE_1']");
 		Node value2 = rootElement.selectSingleNode("option[@value = 'Value: VALUE_2']");
 		assertThat(value1.getText()).isEqualTo("Label: VALUE_1");
@@ -304,16 +303,16 @@ public class OptionsTagTests extends AbstractHtmlElementTagTests {
 		TestBean bean = new TestBean();
 		bean.setName("foo");
 		bean.setCountry("UK");
-		bean.setMyFloat(new Float("12.34"));
+		bean.setMyFloat(Float.valueOf("12.34"));
 		request.setAttribute(COMMAND_NAME, bean);
 
 		List floats = new ArrayList();
-		floats.add(new Float("12.30"));
-		floats.add(new Float("12.31"));
-		floats.add(new Float("12.32"));
-		floats.add(new Float("12.33"));
-		floats.add(new Float("12.34"));
-		floats.add(new Float("12.35"));
+		floats.add(Float.valueOf("12.30"));
+		floats.add(Float.valueOf("12.31"));
+		floats.add(Float.valueOf("12.32"));
+		floats.add(Float.valueOf("12.33"));
+		floats.add(Float.valueOf("12.34"));
+		floats.add(Float.valueOf("12.35"));
 
 		request.setAttribute("floats", floats);
 	}
