@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,13 +17,14 @@
 package org.springframework.web.socket.messaging;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import org.springframework.beans.DirectFieldAccessor;
 import org.springframework.messaging.MessageChannel;
@@ -47,7 +48,7 @@ import static org.mockito.Mockito.verify;
  * @author Rossen Stoyanchev
  * @author Andy Wilkinson
  */
-@RunWith(MockitoJUnitRunner.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class SubProtocolWebSocketHandlerTests {
 
 	@Mock SubProtocolHandler stompHandler;
@@ -66,11 +67,11 @@ public class SubProtocolWebSocketHandlerTests {
 	private TestWebSocketSession session;
 
 
-	@Before
-	public void setup() {
+	@BeforeEach
+	void setup() {
 		this.webSocketHandler = new SubProtocolWebSocketHandler(this.inClientChannel, this.outClientChannel);
 		given(stompHandler.getSupportedProtocols()).willReturn(Arrays.asList("v10.stomp", "v11.stomp", "v12.stomp"));
-		given(mqttHandler.getSupportedProtocols()).willReturn(Arrays.asList("MQTT"));
+		given(mqttHandler.getSupportedProtocols()).willReturn(List.of("MQTT"));
 		this.session = new TestWebSocketSession();
 		this.session.setId("1");
 		this.session.setOpen(true);
@@ -78,7 +79,7 @@ public class SubProtocolWebSocketHandlerTests {
 
 
 	@Test
-	public void subProtocolMatch() throws Exception {
+	void subProtocolMatch() throws Exception {
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
 		this.session.setAcceptedProtocol("v12.sToMp");
 		this.webSocketHandler.afterConnectionEstablished(session);
@@ -89,7 +90,7 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void subProtocolDefaultHandlerOnly() throws Exception {
+	void subProtocolDefaultHandlerOnly() throws Exception {
 		this.webSocketHandler.setDefaultProtocolHandler(stompHandler);
 		this.session.setAcceptedProtocol("v12.sToMp");
 		this.webSocketHandler.afterConnectionEstablished(session);
@@ -99,7 +100,7 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void subProtocolNoMatch() throws Exception {
+	void subProtocolNoMatch() {
 		this.webSocketHandler.setDefaultProtocolHandler(defaultHandler);
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
 		this.session.setAcceptedProtocol("wamp");
@@ -109,7 +110,7 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void nullSubProtocol() throws Exception {
+	void nullSubProtocol() throws Exception {
 		this.webSocketHandler.setDefaultProtocolHandler(defaultHandler);
 		this.webSocketHandler.afterConnectionEstablished(session);
 
@@ -120,7 +121,7 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void emptySubProtocol() throws Exception {
+	void emptySubProtocol() throws Exception {
 		this.session.setAcceptedProtocol("");
 		this.webSocketHandler.setDefaultProtocolHandler(this.defaultHandler);
 		this.webSocketHandler.afterConnectionEstablished(session);
@@ -132,8 +133,8 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void noSubProtocolOneHandler() throws Exception {
-		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler));
+	void noSubProtocolOneHandler() throws Exception {
+		this.webSocketHandler.setProtocolHandlers(List.of(stompHandler));
 		this.webSocketHandler.afterConnectionEstablished(session);
 
 		verify(this.stompHandler).afterSessionStarted(
@@ -141,14 +142,14 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void noSubProtocolTwoHandlers() throws Exception {
+	void noSubProtocolTwoHandlers() {
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
 		assertThatIllegalStateException().isThrownBy(() ->
 				this.webSocketHandler.afterConnectionEstablished(session));
 	}
 
 	@Test
-	public void noSubProtocolNoDefaultHandler() throws Exception {
+	void noSubProtocolNoDefaultHandler() {
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
 		assertThatIllegalStateException().isThrownBy(() ->
 				this.webSocketHandler.afterConnectionEstablished(session));
@@ -164,7 +165,7 @@ public class SubProtocolWebSocketHandlerTests {
 		session1.setAcceptedProtocol("v12.stomp");
 		session2.setAcceptedProtocol("v12.stomp");
 
-		this.webSocketHandler.setProtocolHandlers(Arrays.asList(this.stompHandler));
+		this.webSocketHandler.setProtocolHandlers(List.of(this.stompHandler));
 		this.webSocketHandler.afterConnectionEstablished(session1);
 		this.webSocketHandler.afterConnectionEstablished(session2);
 
@@ -181,13 +182,18 @@ public class SubProtocolWebSocketHandlerTests {
 		this.webSocketHandler.start();
 		this.webSocketHandler.handleMessage(session1, new TextMessage("foo"));
 
+		TestWebSocketSession session3 = new TestWebSocketSession("id3");
+		session3.setOpen(true);
+		session3.setAcceptedProtocol("v12.stomp");
+		this.webSocketHandler.afterConnectionEstablished(session1);
+
 		assertThat(session1.isOpen()).isTrue();
 		assertThat(session1.getCloseStatus()).isNull();
 
 		assertThat(session2.isOpen()).isFalse();
 		assertThat(session2.getCloseStatus()).isEqualTo(CloseStatus.SESSION_NOT_RELIABLE);
 
-		assertThat(handlerAccessor.getPropertyValue("lastSessionCheckTime")).as("lastSessionCheckTime not updated").isNotEqualTo(sixtyOneSecondsAgo);
+		assertThat(handlerAccessor.getPropertyValue("lastSessionCheckTime")).isNotEqualTo(sixtyOneSecondsAgo);
 	}
 
 }
