@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentSkipListSet;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -40,95 +40,95 @@ import static org.mockito.Mockito.mock;
  *
  * @author Sebastien Deleuze
  */
-public class OriginHandshakeInterceptorTests extends AbstractHttpRequestTests {
+class OriginHandshakeInterceptorTests extends AbstractHttpRequestTests {
 
 	private final Map<String, Object> attributes = new HashMap<>();
-	private final WebSocketHandler wsHandler = mock(WebSocketHandler.class);
+	private final WebSocketHandler wsHandler = mock();
 
 
 	@Test
-	public void invalidInput() {
+	void invalidInput() {
 		assertThatIllegalArgumentException().isThrownBy(() -> new OriginHandshakeInterceptor(null));
 	}
 
 	@Test
-	public void originValueMatch() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain1.com");
-		List<String> allowed = Collections.singletonList("https://mydomain1.com");
+	void originValueMatch() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain1.example");
+		List<String> allowed = Collections.singletonList("https://mydomain1.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(allowed);
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isTrue();
-		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo((long) servletResponse.getStatus());
+		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void originValueNoMatch() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain1.com");
-		List<String> allowed = Collections.singletonList("https://mydomain2.com");
+	void originValueNoMatch() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain1.example");
+		List<String> allowed = Collections.singletonList("https://mydomain2.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(allowed);
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isFalse();
 		assertThat(HttpStatus.FORBIDDEN.value()).isEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void originListMatch() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain2.com");
-		List<String> allowed = Arrays.asList("https://mydomain1.com", "https://mydomain2.com", "http://mydomain3.com");
+	void originListMatch() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain2.example");
+		List<String> allowed = Arrays.asList("https://mydomain1.example", "https://mydomain2.example", "http://mydomain3.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(allowed);
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isTrue();
-		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo((long) servletResponse.getStatus());
+		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void originListNoMatch() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://www.mydomain4.com/");
-		List<String> allowed = Arrays.asList("https://mydomain1.com", "https://mydomain2.com", "http://mydomain3.com");
+	void originListNoMatch() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://www.mydomain4.example/");
+		List<String> allowed = Arrays.asList("https://mydomain1.example", "https://mydomain2.example", "http://mydomain3.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(allowed);
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isFalse();
 		assertThat(HttpStatus.FORBIDDEN.value()).isEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void originNoMatchWithNullHostileCollection() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://www.mydomain4.com/");
+	void originNoMatchWithNullHostileCollection() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://www.mydomain4.example/");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor();
 		Set<String> allowedOrigins = new ConcurrentSkipListSet<>();
-		allowedOrigins.add("https://mydomain1.com");
+		allowedOrigins.add("https://mydomain1.example");
 		interceptor.setAllowedOrigins(allowedOrigins);
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isFalse();
 		assertThat(HttpStatus.FORBIDDEN.value()).isEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void originMatchAll() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain1.com");
+	void originMatchAll() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "https://mydomain1.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor();
 		interceptor.setAllowedOrigins(Collections.singletonList("*"));
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isTrue();
-		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo((long) servletResponse.getStatus());
+		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void sameOriginMatchWithEmptyAllowedOrigins() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://mydomain2.com");
-		this.servletRequest.setServerName("mydomain2.com");
+	void sameOriginMatchWithEmptyAllowedOrigins() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://mydomain2.example");
+		this.servletRequest.setServerName("mydomain2.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(Collections.emptyList());
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isTrue();
-		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo((long) servletResponse.getStatus());
+		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void sameOriginMatchWithAllowedOrigins() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://mydomain2.com");
-		this.servletRequest.setServerName("mydomain2.com");
-		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(Arrays.asList("http://mydomain1.com"));
+	void sameOriginMatchWithAllowedOrigins() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://mydomain2.example");
+		this.servletRequest.setServerName("mydomain2.example");
+		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(List.of("http://mydomain1.example"));
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isTrue();
-		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo((long) servletResponse.getStatus());
+		assertThat(HttpStatus.FORBIDDEN.value()).isNotEqualTo(servletResponse.getStatus());
 	}
 
 	@Test
-	public void sameOriginNoMatch() throws Exception {
-		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://mydomain3.com");
-		this.servletRequest.setServerName("mydomain2.com");
+	void sameOriginNoMatch() throws Exception {
+		this.servletRequest.addHeader(HttpHeaders.ORIGIN, "http://mydomain3.example");
+		this.servletRequest.setServerName("mydomain2.example");
 		OriginHandshakeInterceptor interceptor = new OriginHandshakeInterceptor(Collections.emptyList());
 		assertThat(interceptor.beforeHandshake(request, response, wsHandler, attributes)).isFalse();
 		assertThat(HttpStatus.FORBIDDEN.value()).isEqualTo(servletResponse.getStatus());
